--- a/新闻/美国之音.md
+++ b/新闻/美国之音.md
@@ -1,4 +1,6 @@
 
+  ## 6/3/2023 - [中印互驱记者关系降至新低，边境局势依然紧张或一触即发 ](https://www.voachinese.com/a/as-india-and-china-rivalry-escalates-will-new-delhi-and-beijing-slip-into-another-border-conflict-soon-/7121047.html)
+ ```自2020年6月加勒万河谷的流血冲突之后，中印边界争端已持续近三年，且仍无大规模撤军的迹象。两国近日更是互相驱逐记者，进一步限缩沟通渠道。军事专家认为，尽管短期内未必会爆发大规模冲突，中印多轮高层谈判有名无实并且在敏感地带不断强化军事存在，提升了擦枪走火的风险，阻滞双边关系正常化轨迹。```0
   ## 6/3/2023 - [中俄无视美国在联合国谴责朝鲜发射卫星的呼吁](https://www.voachinese.com/a/china-and-russia-ignore-us-call-at-un-to-condemn-north-korea-launch-20230602/7121345.html)
  ```中国和俄罗斯周五（6月2日）无视美国呼吁联合国安理会团结起来，共同谴责朝鲜本周试图发射卫星，反而指责华盛顿加剧了朝鲜半岛的紧张局势。```0
   ## 6/3/2023 - [拜登在白宫椭圆形办公室就避免债务违约发表讲话，强调两党妥协与共识](https://www.voachinese.com/a/biden-highlights-compromise-in-oval-office-remarks-on-us-avoiding-default-20230602/7121372.html)
@@ -44,7 +46,3 @@
 
 ](https://www.voachinese.com/a/jpmorgan-s-dimon-visits-taiwan-to-meet-staff-clients-20230602/7120017.html)
  ```美国投行摩根大通首席执行官杰米·戴蒙在结束了他对中国大陆的访问之后于周五前往台湾访问。这是他十年来首次访问台湾。```0
-  ## 6/2/2023 - [政治红线下寻找悼念空间 香港前区议员派发蜡烛唤起港人六四回忆
-
-](https://www.voachinese.com/a/hong-kong-ex-democrat-politician-gives-out-candles-on-tiananmen-crackdown-anniversary-2-0230602/7120250.html)
- ```在港版国安法和疫情的影响下，过去数年香港人无法自由悼念六四。近日港府官员更先后就悼念六四表态，强调港人的行为若不符合法律会果断执法。在大多数港人选择保持沉默的同时，香港一名前民主派区议员却在政治红线下以自己的方式唤起港人对六四的记忆。```0
