--- a/新闻/美国之音.md
+++ b/新闻/美国之音.md
@@ -1,4 +1,6 @@
 
+  ## 6/3/2023 - [奥斯汀：不寻求冲突，但不会在欺凌和胁迫面前退缩，否认刺激中国武力攻台 ](https://www.voachinese.com/a/us-china-shangri-la-dialogue-taiwan-south-china-sea-20230603/7121408.html)
+ ```美国国防部长奥斯汀6月3日在“香格里拉对话”会上发表的演讲中在强调伙伴关系对确保印太地区共同愿景的重要性时也对中国在印太地区咄咄逼人的行为表示关切。他说，美国不寻求冲突或对抗，但不会在欺凌和胁迫面前退缩。他还表示，台海冲突并不是迫在眉睫，也不是不可避免，但一旦爆发冲突将是毁灭性的。奥斯汀否认美国有意刺激中国武力攻打台湾。```0
   ## 6/3/2023 - [中印互驱记者关系降至新低，边境局势依然紧张或一触即发 ](https://www.voachinese.com/a/as-india-and-china-rivalry-escalates-will-new-delhi-and-beijing-slip-into-another-border-conflict-soon-/7121047.html)
  ```自2020年6月加勒万河谷的流血冲突之后，中印边界争端已持续近三年，且仍无大规模撤军的迹象。两国近日更是互相驱逐记者，进一步限缩沟通渠道。军事专家认为，尽管短期内未必会爆发大规模冲突，中印多轮高层谈判有名无实并且在敏感地带不断强化军事存在，提升了擦枪走火的风险，阻滞双边关系正常化轨迹。```0
   ## 6/3/2023 - [中俄无视美国在联合国谴责朝鲜发射卫星的呼吁](https://www.voachinese.com/a/china-and-russia-ignore-us-call-at-un-to-condemn-north-korea-launch-20230602/7121345.html)
@@ -40,9 +42,3 @@
  ```美国中央情报局长威廉·伯恩斯（WilliamBurns）上个月曾经秘密前往中国访问，并与中方官员举行会谈。在美中高层沟通不畅的情况下，拜登总统派遣他最信赖的高层官员之一访问中国，表明了美国政府对美中关系急剧恶化的严重关切。```0
   ## 6/2/2023 - [无功而返， 斡旋俄乌冲突的中国特使考虑第二次出访欧洲](https://www.voachinese.com/a/china-weighs-next-ukraine-peace-mission-after-first-yields-little-progress-20230602/7120028.html)
  ```中国负责斡旋俄乌冲突的欧亚事务特使李辉星期五（6月2日）表示，虽然他最近对俄乌以及其他一些欧洲国家的访问并未产生立即的效果，但北京正在考虑新一轮的促和使命。```0
-  ## 6/2/2023 - [摩根大通CEO戴蒙敏感时期访台，台官方机构称没有会见安排
-
-
-
-](https://www.voachinese.com/a/jpmorgan-s-dimon-visits-taiwan-to-meet-staff-clients-20230602/7120017.html)
- ```美国投行摩根大通首席执行官杰米·戴蒙在结束了他对中国大陆的访问之后于周五前往台湾访问。这是他十年来首次访问台湾。```0
