--- a/新闻/法国国际广播电台.md
+++ b/新闻/法国国际广播电台.md
@@ -1,4 +1,10 @@
 
+  ## 6/3/2023 - [美国情报总监密访了中国](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E7%BE%8E%E5%9B%BD%E6%83%85%E6%8A%A5%E6%80%BB%E7%9B%91%E5%AF%86%E8%AE%BF%E4%BA%86%E4%B8%AD%E5%9B%BD)
+ ```美国拜登政府急切希望与中国重新恢复对话。在美国国防部长奥斯汀出席新加坡香格里拉安全对话论坛主动与中国国防部长李尚福握手互动消息传出之前，美国中央情报局局长伯恩斯被爆料数日前曾秘密访问北京。美国强调与中国高层对话具有重要意义。```0
+  ## 6/3/2023 - [印度重大铁路事故死亡人数升至288人，850人受伤](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20230603-%E5%8D%B0%E5%BA%A6%E9%87%8D%E5%A4%A7%E9%93%81%E8%B7%AF%E4%BA%8B%E6%95%85%E6%AD%BB%E4%BA%A1%E4%BA%BA%E6%95%B0%E5%8D%87%E8%87%B3288%E4%BA%BA%EF%BC%8C850%E4%BA%BA%E5%8F%97%E4%BC%A4)
+ ```印度周五（6月2日）晚间发生三辆火车相撞重大事故，救灾官员表示，已知造成至少288人死亡，850人受伤，死伤人数仍在攀升，这是印度逾20年来最惨重的铁路事故。```0
+  ## 6/3/2023 - [美国防长呼吁中国军方开放沟通渠道 避免冲突](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E7%BE%8E%E5%9B%BD%E9%98%B2%E9%95%BF%E5%91%BC%E5%90%81%E4%B8%AD%E5%9B%BD%E5%86%9B%E6%96%B9%E5%BC%80%E6%94%BE%E6%B2%9F%E9%80%9A%E6%B8%A0%E9%81%93-%E9%81%BF%E5%85%8D%E5%86%B2%E7%AA%81)
+ ```美国防长奥斯汀于6月3日在“香格里拉对话”亚洲安全峰会上呼吁中国国防和军事领导人开放沟通渠道，避免冲突促进亚洲地区稳定。```0
   ## 6/2/2023 - [印度东部发生火车意外 至少50死 数百人受伤](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20230602-%E5%8D%B0%E5%BA%A6%E4%B8%9C%E9%83%A8%E5%8F%91%E7%94%9F%E7%81%AB%E8%BD%A6%E6%84%8F%E5%A4%96-%E8%87%B3%E5%B0%9150%E6%AD%BB-%E6%95%B0%E7%99%BE%E4%BA%BA%E5%8F%97%E4%BC%A4)
  ```6月2日星期五，印度东部奥迪沙邦发生火车意外，导致至少50人死亡，数百人受伤。```0
   ## 6/2/2023 - [在中国，埃隆·马斯克展示了他是怎样的两面派](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%B3%95%E5%9B%BD%E4%B8%96%E7%95%8C%E6%8A%A5/20230602-%E5%9C%A8%E4%B8%AD%E5%9B%BD%EF%BC%8C%E5%9F%83%E9%9A%86%C2%B7%E9%A9%AC%E6%96%AF%E5%85%8B%E5%B1%95%E7%A4%BA%E4%BA%86%E4%BB%96%E6%98%AF%E6%80%8E%E6%A0%B7%E7%9A%84%E4%B8%A4%E9%9D%A2%E6%B4%BE)
@@ -49,13 +55,7 @@
  ```由南非轮值主席主办的金砖集团峰会还有两个月时间召开，南非要不要执行国际刑事法庭对俄罗斯总统普京已经发出的国际逮捕令，仍然是一个未决问题。南非连续两天召开外长会议，为峰会敲定程序，也为应该与否豁免普京做出讨论。会议昨天结束，南非似乎仍然没有做出决断，以模糊牌回应外界质询。```0
   ## 6/2/2023 - [海内外抗遗忘：许志永狱中吁「六四禁食」 新纪念馆美国今开幕延「六四」记忆](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230602-%E6%B5%B7%E5%86%85%E5%A4%96%E6%8A%97%E9%81%97%E5%BF%98-%E8%AE%B8%E5%BF%97%E6%B0%B8%E7%8B%B1%E4%B8%AD%E5%90%81-%E5%85%AD%E5%9B%9B%E7%A6%81%E9%A3%9F-%E6%96%B0%E7%BA%AA%E5%BF%B5%E9%A6%86%E7%BE%8E%E5%9B%BD%E4%BB%8A%E5%BC%80%E5%B9%95%E5%BB%B6-%E5%85%AD%E5%9B%9B-%E8%AE%B0%E5%BF%86)
  ```后天是「六四事件」34周年纪念日，在香港因打压而难以公开悼念之际，海内外均出现抗拒遗忘的行动：六四纪念馆在香港的被迫关闭后不足两年，重建的新馆今天在美国纽约开幕；上月因「颠覆国家政权罪」判囚14年的维权律师许志永透过管道向外界传递讯息，表示「六四」会在狱中继续悼念：「我会禁食一天，这是不可遏制的纪念……即使身陷囹圄依然可以坚持。」他更呼吁其他人当日一起禁食，以纪念先辈的牺牲和筑起华夏新民族精神。```0
-  ## 6/2/2023 - [拜登：美国不寻求与中国发生冲突或对抗，但准备好迎接激烈竞争](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E8%A6%81%E9%97%BB%E5%88%86%E6%9E%90/20230602-%E6%8B%9C%E7%99%BB-%E7%BE%8E%E5%9B%BD%E5%B9%B6%E4%B8%8D%E5%AF%BB%E6%B1%82%E4%B8%8E%E4%B8%AD%E5%9B%BD%E5%8F%91%E7%94%9F%E5%86%B2%E7%AA%81%E6%88%96%E5%AF%B9%E6%8A%97)
- ```美国国防部长奥斯汀（LloydAustin）周四在日本访问时再次呼吁，“欢迎任何机会”与中国军方领导人接触。他在东京出席记者会时表示，中方拒绝了由美方提出在周末新加坡香格里拉对话会期间举行两国防长会议的提议是“不幸的”。奥斯汀指出，双方持续缺乏沟通或将导致“一个可能非常、非常迅速地失去控制的事件”。```0
-  ## 6/1/2023 - [法乌总统指示两国防长就培训乌克兰飞行员制定多国机制](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20230601-%E6%B3%95%E4%B9%8C%E6%80%BB%E7%BB%9F%E6%8C%87%E7%A4%BA%E4%B8%A4%E5%9B%BD%E9%98%B2%E9%95%BF%E5%B0%B1%E5%9F%B9%E8%AE%AD%E4%B9%8C%E5%85%8B%E5%85%B0%E9%A3%9E%E8%A1%8C%E5%91%98%E5%88%B6%E5%AE%9A%E6%AD%A3%E5%BC%8F%E6%9C%BA%E5%88%B6)
- ```6月1日，法国总统马克龙（EmmanuelMacron）与乌克兰总统泽连斯基（VolodymyrZelenskyy）在摩尔多瓦出席第二届欧洲政治共同体（EPC）峰会期间举行了双边会晤。会后，两国领导人决定，法乌防长将就培训乌克兰飞行员和技术人员的有关事宜展开磋商，并于下一次的乌克兰防务问题国际联络小组会议上提出正式框架和机制，与其他将对乌提供相关培训的国家协商，作出共同决定。```0
   ## 6/1/2023 - [法国参议院通过动议案，禁止进口维吾尔人强迫劳动产品](https://www.rfi.fr/cn/%E6%B3%95%E5%9B%BD/20230601-%E6%B3%95%E5%9B%BD%E5%8F%82%E8%AE%AE%E9%99%A2%E9%80%9A%E8%BF%87%E5%8A%A8%E8%AE%AE%E6%A1%88%EF%BC%8C%E7%A6%81%E6%AD%A2%E8%BF%9B%E5%8F%A3%E7%BB%B4%E5%90%BE%E5%B0%94%E4%BA%BA%E5%BC%BA%E8%BF%AB%E5%8A%B3%E5%8A%A8%E4%BA%A7%E5%93%81)
  ```法新社报道，法国参议院6月1日星期四通过了一项动议案，要求禁止进口由中国的维吾尔人通过强迫劳动生产出的产品。```0
-  ## 6/1/2023 - [台美签署首批协定 蔡英文期待台美建立更紧密伙伴关系](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230601-%E5%8F%B0%E7%BE%8E%E7%AD%BE%E7%BD%B2%E9%A6%96%E6%89%B9%E5%8D%8F%E5%AE%9A-%E8%94%A1%E8%8B%B1%E6%96%87%E6%9C%9F%E5%BE%85%E5%8F%B0%E7%BE%8E%E5%BB%BA%E7%AB%8B%E6%9B%B4%E7%B4%A7%E5%AF%86%E4%BC%99%E4%BC%B4%E5%85%B3%E7%B3%BB)
- ```台湾与美国双方6月1日于华盛顿的美国在台协会（AIT）总部签署美台"21世纪贸易倡议"首批协定。台湾总统蔡英文表示，期待未来台美建立更紧密伙伴关系。台湾经贸办称，这项协定为台美经贸打下坚实的法律基础，未来极有机会发展为更广泛的自由贸易协定，且有助于台湾参加跨太平洋伙伴全面进步协定（CPTPP）。```0
   ## 6/1/2023 - [泽连斯基强烈要求加入北约欧盟 马克龙：北约应给予乌克兰安全保证](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230601-%E6%B3%BD%E8%BF%9E%E6%96%AF%E5%9F%BA%E5%BC%BA%E7%83%88%E8%A6%81%E6%B1%82%E5%8A%A0%E5%85%A5%E5%8C%97%E7%BA%A6%E6%AC%A7%E7%9B%9F-%E9%A9%AC%E5%85%8B%E9%BE%99-%E5%8C%97%E7%BA%A6%E5%BA%94%E7%BB%99%E4%BA%88%E4%B9%8C%E5%85%8B%E5%85%B0%E5%AE%89%E5%85%A8%E4%BF%9D%E8%AF%81)
  ```乌克兰总统泽连斯基周四(6月1日）在摩尔多瓦举行的欧洲政治共同体峰会上敦促欧洲加强对乌克兰的支持，并表达乌克兰加入北约及欧盟的强烈愿望；法国总统马克龙表示，北约应给予乌克兰安全保证及明确的愿景。```0
