--- a/新闻/德国之声.md
+++ b/新闻/德国之声.md
@@ -1,4 +1,6 @@
 
+  ## 6/3/2023 - [美国智库：中国没有大规模扩大与俄罗斯的贸易](https://www.dw.com/zh/美国智库：中国没有大规模扩大与俄罗斯的贸易/a-65796772?maca=chi-rss-chi-all-1127-rdf)
+ ```美国智库大西洋理事会的一项研究显示，自俄罗斯全面入侵乌克兰以来，中国等一些国家加强了与俄罗斯的贸易，但其幅度远远小于印度、土耳其、希腊等国。此外，有迹象表明，中国在与俄罗斯的经济交往中保持了一定的克制。```0
   ## 6/2/2023 - [六四紀念館紐約開幕 特設香港民運展區](https://www.dw.com/zh/六四紀念館紐約開幕-特設香港民運展區/a-65811714?maca=chi-rss-chi-all-1127-rdf)
  ```由八九民運領袖籌辦的六四紀念館，正式在美國紐約開幕，展出34年前六四事件的歷史物品。香港曾經作為支援中國民運的集中地，今天也成為展館的一個特別元素。```0
   ## 6/2/2023 - [约翰·塞巴斯蒂安·巴赫:D小调托卡塔](https://www.dw.com/zh/约翰·塞巴斯蒂安·巴赫-d小调托卡塔/a-65809848?maca=chi-rss-chi-all-1127-rdf)
@@ -63,8 +65,6 @@
  ```中国成功运作着自己的空间站“天宫”，并与美国一样计划近些年内实现载人登月。周二，中国再次将三名宇航员送入太空，接替“天宫”现有宇航员。```0
   ## 5/30/2023 - [經濟復甦緩慢 中國地攤重返街頭](https://www.dw.com/zh/經濟復甦緩慢-中國地攤重返街頭/a-65767207?maca=chi-rss-chi-all-1127-rdf)
  ```中國嚴重的失業問題正在衝擊全國，許多城市放寬了對於小販的管控，淄博燒烤更在網上火紅。這樣的地攤經濟學能夠挽救復甦乏力的經濟和青年失業嗎？```0
-  ## 5/30/2023 - [美欲限縮中國晶片發展 出口管制有用嗎？](https://www.dw.com/zh/美欲限縮中國晶片發展-出口管制有用嗎？/a-65767213?maca=chi-rss-chi-all-1127-rdf)
- ```美國及其盟友近日加大力度、限制中國獲得先進的半導體晶片製造設備。專家表示，這些措施可能影響中國相關產業的發展，但此舉也會對美國公司造成附帶損害。```0
   ## 5/29/2023 - [日本核废水排海在即 原子能机构再赴福岛审查](https://www.dw.com/zh/日本核废水排海在即-原子能机构再赴福岛审查/a-65763766?maca=chi-rss-chi-all-1127-rdf)
  ```日本政府今年夏天启动将福岛核电厂污水排入海洋的计划，但当地渔民和邻国至今对此强烈反对。日本希望国际原子能机构能提供协助，确保排放过程符合安全标准。```0
   ## 5/29/2023 - [德语媒体：“去风险”本身就会造成风险](https://www.dw.com/zh/德语媒体：-去风险-本身就会造成风险/a-65763774?maca=chi-rss-chi-all-1127-rdf)
@@ -89,10 +89,10 @@
  ```为了防止年轻人陷入“毕业即失业”的困境，中国当局使出浑身解数，一面鼓励中小微企业招聘应届生，一面进行公务员和硕士扩招，同时展开舆论宣传攻势。此外，还有高校暗中用力，让数据“更好看”。```0
   ## 5/21/2023 - [航运公会：到2032年船舶回收将翻倍](https://www.dw.com/zh/航运公会：到2032年船舶回收将翻倍/a-65669628?maca=chi-rss-chi-all-1127-rdf)
  ```随着航运业船队转型，变得更加利于气候保护，主要分布于亚洲地区的「船舶坟场」在未来几年内可能会获得空前的关注。```0
-  ## 5/21/2023 - [全球育儿成本韩国最高：钱都花在课外班了](https://www.dw.com/zh/全球育儿成本韩国最高：钱都花在课外班了/a-65674902?maca=chi-rss-chi-all-1127-rdf)
- ```研究显示，韩国是全球育儿成本最高的国家，为GDP的7.79倍，大量花费来自大量的课外补习班。中国位居第二，养育一个孩子到18岁的成本是人均GDP的6.9倍，其次是德国（3.64倍）和法国（2.24倍）。```0
   ## 5/21/2023 - [研究：全球湖泊超过半数正在干涸](https://www.dw.com/zh/研究：全球湖泊超过半数正在干涸/a-65676698?maca=chi-rss-chi-all-1127-rdf)
  ```一项最新研究显示，全球变暖和人类消耗正在导致全球湖泊干涸。```0
+  ## 5/21/2023 - [全球育儿成本韩国最高：钱都花在课外班了](https://www.dw.com/zh/全球育儿成本韩国最高：钱都花在课外班了/a-65674902?maca=chi-rss-chi-all-1127-rdf)
+ ```研究显示，韩国是全球育儿成本最高的国家，为GDP的7.79倍，大量花费来自大量的课外补习班。中国位居第二，养育一个孩子到18岁的成本是人均GDP的6.9倍，其次是德国（3.64倍）和法国（2.24倍）。```0
   ## 5/21/2023 - [世界气象组织警告：未来五年将创下最热记录](https://www.dw.com/zh/世界气象组织警告：未来五年将创下最热记录/a-65668526?maca=chi-rss-chi-all-1127-rdf)
  ```世界气象组织表示，厄尔尼诺和温室气体的综合影响将导致气温飙升，并警告说：“我们需要做好准备。”```0
   ## 5/20/2023 - [又一脱口秀演员在中国遭封杀](https://www.dw.com/zh/又一脱口秀演员在中国遭封杀/a-65684797?maca=chi-rss-chi-all-1127-rdf)
