--- a/新闻/法国国际广播电台.md
+++ b/新闻/法国国际广播电台.md
@@ -1,4 +1,10 @@
 
+  ## 6/3/2023 - [六四前夕传抖音下令禁转“坦克、成龙、天安门”等敏感图文](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E5%85%AD%E5%9B%9B%E5%89%8D%E5%A4%95%E4%BC%A0%E6%8A%96%E9%9F%B3%E4%B8%8B%E4%BB%A4%E7%A6%81%E8%BD%AC-%E5%9D%A6%E5%85%8B-%E6%88%90%E9%BE%99-%E5%A4%A9%E5%AE%89%E9%97%A8-%E7%AD%89%E6%95%8F%E6%84%9F%E5%9B%BE%E6%96%87)
+ ```消息称中国短影音社群平台“抖音”在六四前夕，私下向各大网红与品牌方发布禁令，要求在3至5日这段期间，禁止发布他们列出一系列与六四有关的敏感图文。所列敏感涉及成龙等引发疑问。```0
+  ## 6/3/2023 - [泽连斯基承认乌战结束前无可能加入北约](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230603-%E6%B3%BD%E8%BF%9E%E6%96%AF%E5%9F%BA%E6%89%BF%E8%AE%A4%E4%B9%8C%E6%88%98%E7%BB%93%E6%9D%9F%E5%89%8D%E6%97%A0%E5%8F%AF%E8%83%BD%E5%8A%A0%E5%85%A5%E5%8C%97%E7%BA%A6)
+ ```乌克兰总统泽连斯基承认，在目前与俄罗斯的战争结束之前，乌克兰所坚持的加入北约是"不可能的"。但乌克兰申请加入北约的成员资格问题还是会在7月于立陶宛举行的北约峰会上再次被辩论。```0
+  ## 6/3/2023 - [洪都拉斯任命一顶级医学家任驻华大使](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E6%B4%AA%E9%83%BD%E6%8B%89%E6%96%AF%E4%BB%BB%E5%91%BD%E4%B8%80%E9%A1%B6%E7%BA%A7%E5%8C%BB%E7%94%9F%E4%BB%BB%E9%A9%BB%E5%8D%8E%E5%A4%A7%E4%BD%BF)
+ ```洪都拉斯总统XiomaraCastro宣布，被视为世界领先的医学研究人员之一的SalvadorMoncada博士已被洪都拉斯任命为驻中国大使。洪都拉斯去年3月在牺牲台湾的情况下承认北京。据法新社说，洪都拉斯新大使还具有英国身份，他的夫人是比利时前国王的小女儿。```0
   ## 6/3/2023 - [美国情报总监密访了中国](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E7%BE%8E%E5%9B%BD%E6%83%85%E6%8A%A5%E6%80%BB%E7%9B%91%E5%AF%86%E8%AE%BF%E4%BA%86%E4%B8%AD%E5%9B%BD)
  ```美国拜登政府急切希望与中国重新恢复对话。在美国国防部长奥斯汀出席新加坡香格里拉安全对话论坛主动与中国国防部长李尚福握手互动消息传出之前，美国中央情报局局长伯恩斯被爆料数日前曾秘密访问北京。美国强调与中国高层对话具有重要意义。```0
   ## 6/3/2023 - [印度重大铁路事故死亡人数升至288人，850人受伤](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20230603-%E5%8D%B0%E5%BA%A6%E9%87%8D%E5%A4%A7%E9%93%81%E8%B7%AF%E4%BA%8B%E6%95%85%E6%AD%BB%E4%BA%A1%E4%BA%BA%E6%95%B0%E5%8D%87%E8%87%B3288%E4%BA%BA%EF%BC%8C850%E4%BA%BA%E5%8F%97%E4%BC%A4)
@@ -53,9 +59,3 @@
  ```欧洲理事会主席查尔斯-米歇尔周五抵达吉尔吉斯斯坦，参加欧盟（EU）与中亚地区的第二次峰会，在俄罗斯衰弱的背景下，中亚地区正受到大国的热烈追捧，欧盟已经是该地区最大的捐助方。```0
   ## 6/2/2023 - [金砖峰会上不逮捕普京？南非打模糊牌](https://www.rfi.fr/cn/%E9%9D%9E%E6%B4%B2/20230602-%E9%87%91%E7%A0%96%E5%B3%B0%E4%BC%9A%E4%B8%8A%E4%B8%8D%E9%80%AE%E6%8D%95%E6%99%AE%E4%BA%AC-%E5%8D%97%E9%9D%9E%E6%89%93%E6%A8%A1%E7%B3%8A%E7%89%8C)
  ```由南非轮值主席主办的金砖集团峰会还有两个月时间召开，南非要不要执行国际刑事法庭对俄罗斯总统普京已经发出的国际逮捕令，仍然是一个未决问题。南非连续两天召开外长会议，为峰会敲定程序，也为应该与否豁免普京做出讨论。会议昨天结束，南非似乎仍然没有做出决断，以模糊牌回应外界质询。```0
-  ## 6/2/2023 - [海内外抗遗忘：许志永狱中吁「六四禁食」 新纪念馆美国今开幕延「六四」记忆](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230602-%E6%B5%B7%E5%86%85%E5%A4%96%E6%8A%97%E9%81%97%E5%BF%98-%E8%AE%B8%E5%BF%97%E6%B0%B8%E7%8B%B1%E4%B8%AD%E5%90%81-%E5%85%AD%E5%9B%9B%E7%A6%81%E9%A3%9F-%E6%96%B0%E7%BA%AA%E5%BF%B5%E9%A6%86%E7%BE%8E%E5%9B%BD%E4%BB%8A%E5%BC%80%E5%B9%95%E5%BB%B6-%E5%85%AD%E5%9B%9B-%E8%AE%B0%E5%BF%86)
- ```后天是「六四事件」34周年纪念日，在香港因打压而难以公开悼念之际，海内外均出现抗拒遗忘的行动：六四纪念馆在香港的被迫关闭后不足两年，重建的新馆今天在美国纽约开幕；上月因「颠覆国家政权罪」判囚14年的维权律师许志永透过管道向外界传递讯息，表示「六四」会在狱中继续悼念：「我会禁食一天，这是不可遏制的纪念……即使身陷囹圄依然可以坚持。」他更呼吁其他人当日一起禁食，以纪念先辈的牺牲和筑起华夏新民族精神。```0
-  ## 6/1/2023 - [法国参议院通过动议案，禁止进口维吾尔人强迫劳动产品](https://www.rfi.fr/cn/%E6%B3%95%E5%9B%BD/20230601-%E6%B3%95%E5%9B%BD%E5%8F%82%E8%AE%AE%E9%99%A2%E9%80%9A%E8%BF%87%E5%8A%A8%E8%AE%AE%E6%A1%88%EF%BC%8C%E7%A6%81%E6%AD%A2%E8%BF%9B%E5%8F%A3%E7%BB%B4%E5%90%BE%E5%B0%94%E4%BA%BA%E5%BC%BA%E8%BF%AB%E5%8A%B3%E5%8A%A8%E4%BA%A7%E5%93%81)
- ```法新社报道，法国参议院6月1日星期四通过了一项动议案，要求禁止进口由中国的维吾尔人通过强迫劳动生产出的产品。```0
-  ## 6/1/2023 - [泽连斯基强烈要求加入北约欧盟 马克龙：北约应给予乌克兰安全保证](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230601-%E6%B3%BD%E8%BF%9E%E6%96%AF%E5%9F%BA%E5%BC%BA%E7%83%88%E8%A6%81%E6%B1%82%E5%8A%A0%E5%85%A5%E5%8C%97%E7%BA%A6%E6%AC%A7%E7%9B%9F-%E9%A9%AC%E5%85%8B%E9%BE%99-%E5%8C%97%E7%BA%A6%E5%BA%94%E7%BB%99%E4%BA%88%E4%B9%8C%E5%85%8B%E5%85%B0%E5%AE%89%E5%85%A8%E4%BF%9D%E8%AF%81)
- ```乌克兰总统泽连斯基周四(6月1日）在摩尔多瓦举行的欧洲政治共同体峰会上敦促欧洲加强对乌克兰的支持，并表达乌克兰加入北约及欧盟的强烈愿望；法国总统马克龙表示，北约应给予乌克兰安全保证及明确的愿景。```0
