--- a/新闻/法国国际广播电台.md
+++ b/新闻/法国国际广播电台.md
@@ -1,11 +1,17 @@
 
+  ## 6/3/2023 - [艾尔多安宣誓就职 北约秘书长到场祝贺敦促放行瑞典入盟](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230603-%E8%89%BE%E5%B0%94%E5%A4%9A%E5%AE%89%E5%AE%A3%E8%AA%93%E5%B0%B1%E8%81%8C-%E5%8C%97%E7%BA%A6%E7%A7%98%E4%B9%A6%E9%95%BF%E5%88%B0%E5%9C%BA%E7%A5%9D%E8%B4%BA%E6%95%A6%E4%BF%83%E6%94%BE%E8%A1%8C%E7%91%9E%E5%85%B8%E5%85%A5%E7%9B%9F)
+ ```土耳其总统埃尔多安(TayyipErdogan)在今天举行的仪式上宣示就职。艾尔多安在上周末赢得连任随后将任命新政府内阁成员。```0
+  ## 6/3/2023 - [印度车难已报261人死亡 今被定为国家哀悼日](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20230603-%E5%8D%B0%E5%BA%A6%E7%81%AB%E8%BD%A620%E5%B9%B4%E6%9D%A5%E6%9C%80%E4%B8%A5%E9%87%8D%E8%BD%A6%E9%9A%BE%E5%B7%B2%E6%8A%A5261%E4%BA%BA%E6%AD%BB%E4%BA%A1-%E4%BB%8A%E5%A4%A9%E5%B7%B2%E7%BB%8F%E8%A2%AB%E5%AE%9A%E4%B8%BA%E5%9B%BD%E5%AE%B6%E5%93%80%E6%82%BC%E6%97%A5)
+ ```印度官员今天报告，至此至少有261人在印度二十多年来最严重的铁路事故中丧生，昨天一列客运列车撞上另一列停运的货车后脱轨翻覆。```0
+  ## 6/3/2023 - [印尼提乌战停战计划即刻遭谴责](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230603-%E5%8D%B0%E5%B0%BC%E6%8F%90%E4%B9%8C%E6%88%98%E5%81%9C%E6%88%98%E8%AE%A1%E5%88%92%E5%8D%B3%E5%88%BB%E9%81%AD%E8%B0%B4%E8%B4%A3)
+ ```印度尼西亚国防部长苏比安托今天在新加坡举行的香格里拉国防和安全会议上提出了一项结束俄罗斯和乌克兰之间战争的计划，提及冻结战场敌对，战区与被俄罗斯占领区由联合国监督公投等，此举立即受到多数与会者的谴责。```0
   ## 6/3/2023 - [六四前夕传抖音下令禁转“坦克、成龙、天安门”等敏感图文](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E5%85%AD%E5%9B%9B%E5%89%8D%E5%A4%95%E4%BC%A0%E6%8A%96%E9%9F%B3%E4%B8%8B%E4%BB%A4%E7%A6%81%E8%BD%AC-%E5%9D%A6%E5%85%8B-%E6%88%90%E9%BE%99-%E5%A4%A9%E5%AE%89%E9%97%A8-%E7%AD%89%E6%95%8F%E6%84%9F%E5%9B%BE%E6%96%87)
  ```消息称中国短影音社群平台“抖音”在六四前夕，私下向各大网红与品牌方发布禁令，要求在3至5日这段期间，禁止发布他们列出一系列与六四有关的敏感图文。所列敏感涉及成龙等引发疑问。```0
   ## 6/3/2023 - [泽连斯基承认乌战结束前无可能加入北约](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230603-%E6%B3%BD%E8%BF%9E%E6%96%AF%E5%9F%BA%E6%89%BF%E8%AE%A4%E4%B9%8C%E6%88%98%E7%BB%93%E6%9D%9F%E5%89%8D%E6%97%A0%E5%8F%AF%E8%83%BD%E5%8A%A0%E5%85%A5%E5%8C%97%E7%BA%A6)
  ```乌克兰总统泽连斯基承认，在目前与俄罗斯的战争结束之前，乌克兰所坚持的加入北约是"不可能的"。但乌克兰申请加入北约的成员资格问题还是会在7月于立陶宛举行的北约峰会上再次被辩论。```0
   ## 6/3/2023 - [洪都拉斯任命一顶级医学家任驻华大使](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E6%B4%AA%E9%83%BD%E6%8B%89%E6%96%AF%E4%BB%BB%E5%91%BD%E4%B8%80%E9%A1%B6%E7%BA%A7%E5%8C%BB%E7%94%9F%E4%BB%BB%E9%A9%BB%E5%8D%8E%E5%A4%A7%E4%BD%BF)
  ```洪都拉斯总统XiomaraCastro宣布，被视为世界领先的医学研究人员之一的SalvadorMoncada博士已被洪都拉斯任命为驻中国大使。洪都拉斯去年3月在牺牲台湾的情况下承认北京。据法新社说，洪都拉斯新大使还具有英国身份，他的夫人是比利时前国王的小女儿。```0
-  ## 6/3/2023 - [美国情报总监密访了中国](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E7%BE%8E%E5%9B%BD%E6%83%85%E6%8A%A5%E6%80%BB%E7%9B%91%E5%AF%86%E8%AE%BF%E4%BA%86%E4%B8%AD%E5%9B%BD)
+  ## 6/3/2023 - [美国CIA局长密访了中国](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E7%BE%8E%E5%9B%BD%E6%83%85%E6%8A%A5%E6%80%BB%E7%9B%91%E5%AF%86%E8%AE%BF%E4%BA%86%E4%B8%AD%E5%9B%BD)
  ```美国拜登政府急切希望与中国重新恢复对话。在美国国防部长奥斯汀出席新加坡香格里拉安全对话论坛主动与中国国防部长李尚福握手互动消息传出之前，美国中央情报局局长伯恩斯被爆料数日前曾秘密访问北京。美国强调与中国高层对话具有重要意义。```0
   ## 6/3/2023 - [印度重大铁路事故死亡人数升至288人，850人受伤](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20230603-%E5%8D%B0%E5%BA%A6%E9%87%8D%E5%A4%A7%E9%93%81%E8%B7%AF%E4%BA%8B%E6%95%85%E6%AD%BB%E4%BA%A1%E4%BA%BA%E6%95%B0%E5%8D%87%E8%87%B3288%E4%BA%BA%EF%BC%8C850%E4%BA%BA%E5%8F%97%E4%BC%A4)
  ```印度周五（6月2日）晚间发生三辆火车相撞重大事故，救灾官员表示，已知造成至少288人死亡，850人受伤，死伤人数仍在攀升，这是印度逾20年来最惨重的铁路事故。```0
@@ -53,9 +59,3 @@
  ```明年6月6日至9日间，欧洲联盟27个国家选民将投票选出新一届的欧洲议会议员，明年7月1日起议会和欧盟执委会人事都将换新。欧盟议会以高票赞成通过一份报告文件，明确警告外国干预选举，建议全欧盟范围下架来自中国与俄罗斯的平台，设备以及软件例如华为、中兴电讯、同方威视，以及俄国资安公司卡巴斯基（Kaspersky）、生物辨识公司NtechLab等。```0
   ## 6/2/2023 - [俄罗斯发动一月内第6波夜袭 乌克兰称全部成功拦截](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230602-%E4%BF%84%E7%BD%97%E6%96%AF%E5%8F%91%E5%8A%A8%E4%B8%80%E6%9C%88%E5%86%85%E7%AC%AC6%E6%B3%A2%E5%A4%9C%E8%A2%AD-%E4%B9%8C%E5%85%8B%E5%85%B0%E7%A7%B0%E5%85%A8%E9%83%A8%E6%88%90%E5%8A%9F%E6%8B%A6%E6%88%AA)
  ```乌克兰今天报告已经拦截了所有俄罗斯昨夜今晨攻击乌克兰的导弹和无人机，这些导弹和无人机仍然是在夜间出动，袭击目标包括基辅。```0
-  ## 6/2/2023 - [香港罕见闪电劈公屋外墙 专家指避雷设施非百分百保障](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230602-%E9%A6%99%E6%B8%AF%E7%BD%95%E8%A7%81%E9%97%AA%E7%94%B5%E5%8A%88%E5%85%AC%E5%B1%8B%E5%A4%96%E5%A2%99-%E4%B8%93%E5%AE%B6%E6%8C%87%E9%81%BF%E9%9B%B7%E8%AE%BE%E6%96%BD%E9%9D%9E%E7%99%BE%E5%88%86%E7%99%BE%E4%BF%9D%E9%9A%9C)
- ```香港昨(1日)晨在雷电交加之际，一个公共屋村单位竟被闪电击中，单位外的石檐篷一角亦有崩缺，单位内无人受伤，但户内人员均受惊吓。管理公屋的房屋署表示，已检查该屋村的避雷设施，并无问题；天文台官员则指出，闪电击中位置有随机性，避雷针并非百分百保障。```0
-  ## 6/2/2023 - [欧盟将与中亚五国举行第二次峰会  呼吁建立“真诚的伙伴关系”](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230602-%E6%AC%A7%E7%9B%9F%E4%B8%8E%E4%B8%AD%E4%BA%9A%E4%BA%94%E5%9B%BD%E4%B8%BE%E8%A1%8C%E7%AC%AC%E4%BA%8C%E6%AC%A1%E5%B3%B0%E4%BC%9A)
- ```欧洲理事会主席查尔斯-米歇尔周五抵达吉尔吉斯斯坦，参加欧盟（EU）与中亚地区的第二次峰会，在俄罗斯衰弱的背景下，中亚地区正受到大国的热烈追捧，欧盟已经是该地区最大的捐助方。```0
-  ## 6/2/2023 - [金砖峰会上不逮捕普京？南非打模糊牌](https://www.rfi.fr/cn/%E9%9D%9E%E6%B4%B2/20230602-%E9%87%91%E7%A0%96%E5%B3%B0%E4%BC%9A%E4%B8%8A%E4%B8%8D%E9%80%AE%E6%8D%95%E6%99%AE%E4%BA%AC-%E5%8D%97%E9%9D%9E%E6%89%93%E6%A8%A1%E7%B3%8A%E7%89%8C)
- ```由南非轮值主席主办的金砖集团峰会还有两个月时间召开，南非要不要执行国际刑事法庭对俄罗斯总统普京已经发出的国际逮捕令，仍然是一个未决问题。南非连续两天召开外长会议，为峰会敲定程序，也为应该与否豁免普京做出讨论。会议昨天结束，南非似乎仍然没有做出决断，以模糊牌回应外界质询。```0
