--- a/新闻/德国之声.md
+++ b/新闻/德国之声.md
@@ -1,4 +1,10 @@
 
+  ## 6/3/2023 - [禽流感威胁哺乳动物 专家吁为家禽接种疫苗](https://www.dw.com/zh/禽流感威胁哺乳动物-专家吁为家禽接种疫苗/a-65815230?maca=chi-rss-chi-all-1127-rdf)
+ ```研究显示，禽流感病毒正在迅速变化。尽管目前对人类的威胁仍然很低，但专家指出：哺乳动物感染禽流感的病例激增是个令人担忧现象。包含中国、越南等国家开始为家禽接种疫苗，以降低可能对人类造成的风险。```0
+  ## 6/3/2023 - [印度三列火车相撞，至少280人遇难](https://www.dw.com/zh/印度三列火车相撞，至少280人遇难/a-65815142?maca=chi-rss-chi-all-1127-rdf)
+ ```印度东部奥里萨邦三列火车相撞，造成至少280人死亡，数百人受伤。救援工作仍在进行之中。```0
+  ## 6/3/2023 - [美国防长批北京拒绝对话 中国：责任在美方](https://www.dw.com/zh/美国防长批北京拒绝对话-中国：责任在美方/a-65815175?maca=chi-rss-chi-all-1127-rdf)
+ ```美国防长奥斯汀周六在香格里拉对话上强调，台海冲突将造成毁灭性后果。他也表示，美中对话对于避免可能导致冲突的错误判断“至关重要”。此前，北京方面拒绝了他与中国国防部长的正式会面。```0
   ## 6/3/2023 - [美国智库：中国没有大规模扩大与俄罗斯的贸易](https://www.dw.com/zh/美国智库：中国没有大规模扩大与俄罗斯的贸易/a-65796772?maca=chi-rss-chi-all-1127-rdf)
  ```美国智库大西洋理事会的一项研究显示，自俄罗斯全面入侵乌克兰以来，中国等一些国家加强了与俄罗斯的贸易，但其幅度远远小于印度、土耳其、希腊等国。此外，有迹象表明，中国在与俄罗斯的经济交往中保持了一定的克制。```0
   ## 6/2/2023 - [六四紀念館紐約開幕 特設香港民運展區](https://www.dw.com/zh/六四紀念館紐約開幕-特設香港民運展區/a-65811714?maca=chi-rss-chi-all-1127-rdf)
@@ -35,14 +41,10 @@
  ```德国已有本国的供应链法。欧盟范围内的供应链法则正在制定中。欧洲议会、欧盟委员会和代表各成员国的欧盟理事会是制定法律的三方。```0
   ## 6/1/2023 - [德语媒体：对“去风险”，德国想的太天真](https://www.dw.com/zh/德语媒体：对-去风险-，德国想的太天真/a-65795713?maca=chi-rss-chi-all-1127-rdf)
  ```对中国的“去风险”战略，是近期德语媒体持续关注的话题。《世界报》指出，这一概念不像德国人想的那么简单。《柏林日报》认为，中国高层正在把欧洲作为拉拢的目标。.```0
-  ## 6/1/2023 - [WhatsApp在俄罗斯首次因违禁内容被罚款](https://www.dw.com/zh/whatsapp在俄罗斯首次因违禁内容被罚款/a-65794697?maca=chi-rss-chi-all-1127-rdf)
- ```俄罗斯法院分别以未删除违禁药物内容和乌克兰战争信息而对WhatsApp和维基百科开出罚款。维基媒体此前曾表示，俄罗斯当局不满的信息来源良好，符合维基百科标准。```0
   ## 6/1/2023 - [乌克兰何时加盟？北约各国仍存在分歧](https://www.dw.com/zh/乌克兰何时加盟？北约各国仍存在分歧/a-65794083?maca=chi-rss-chi-all-1127-rdf)
  ```德国外长贝尔博克说：“北约的门户开放政策一如既往，但与此同时，战争还在进行之中，我们显然不能讨论接受新成员。”```0
   ## 6/1/2023 - [2022年德国入籍人数创历史新高](https://www.dw.com/zh/2022年德国入籍人数创历史新高/a-65791823?maca=chi-rss-chi-all-1127-rdf)
  ```2022年，申请和获得德国国籍的人数创下过去20年的历史记录。这是一个好消息，因为德国政府希望吸引更多专业人才来到德国，并为此推动了国籍法改革。```0
-  ## 6/1/2023 - [德国总理顾问访华：北京宣传，柏林沉默](https://www.dw.com/zh/德国总理顾问访华：北京宣传，柏林沉默/a-65791189?maca=chi-rss-chi-all-1127-rdf)
- ```德国总理肖尔茨的外交和安全政策顾问普吕特纳本周访问北京，会见王毅、秦刚等中国外事高官，中国媒体予以高调报道。但有关他中国之行的消息，在德国媒体乃至政府官方发布中都未见只字。```0
   ## 6/1/2023 - [财新PMI上升 中国经济复苏出现不一致信号](https://www.dw.com/zh/财新pmi上升-中国经济复苏出现不一致信号/a-65790590?maca=chi-rss-chi-all-1127-rdf)
  ```中国官方公布的制造业PMI显示工业生产继续萎缩。不过，经济杂志财新公布的PMI则显示工业生产处于扩张状态。但即便是财新的调查也显示，就业以及企业信心仍处于低位。```0
   ## 6/1/2023 - [中國國內旅遊熱 海外旅遊仍未達疫前水準](https://www.dw.com/zh/中國國內旅遊熱-海外旅遊仍未達疫前水準/a-65788012?maca=chi-rss-chi-all-1127-rdf)
@@ -87,12 +89,12 @@
  ```中國脫口秀圈近日因「作風優良，能打勝仗」引起熱議，有網友戲稱，中國言論審查太苛刻，想搞脫口秀「要麼管住嘴，要麼邁開腿（潤至自由世界）」。脫口秀演員們如何看待不斷收緊的審查紅線？脫口秀在兩岸又有何差異？DW訪問了4位曾在兩岸演出的脫口秀演員，請他們將「脫口秀在中國」的包袱一一抖開。```0
   ## 5/25/2023 - [青年失业率居高不下 靠“孔乙己脱长衫”解决？](https://www.dw.com/zh/青年失业率居高不下-靠-孔乙己脱长衫-解决？/a-65732307?maca=chi-rss-chi-all-1127-rdf)
  ```为了防止年轻人陷入“毕业即失业”的困境，中国当局使出浑身解数，一面鼓励中小微企业招聘应届生，一面进行公务员和硕士扩招，同时展开舆论宣传攻势。此外，还有高校暗中用力，让数据“更好看”。```0
+  ## 5/21/2023 - [全球育儿成本韩国最高：钱都花在课外班了](https://www.dw.com/zh/全球育儿成本韩国最高：钱都花在课外班了/a-65674902?maca=chi-rss-chi-all-1127-rdf)
+ ```研究显示，韩国是全球育儿成本最高的国家，为GDP的7.79倍，大量花费来自大量的课外补习班。中国位居第二，养育一个孩子到18岁的成本是人均GDP的6.9倍，其次是德国（3.64倍）和法国（2.24倍）。```0
   ## 5/21/2023 - [航运公会：到2032年船舶回收将翻倍](https://www.dw.com/zh/航运公会：到2032年船舶回收将翻倍/a-65669628?maca=chi-rss-chi-all-1127-rdf)
  ```随着航运业船队转型，变得更加利于气候保护，主要分布于亚洲地区的「船舶坟场」在未来几年内可能会获得空前的关注。```0
   ## 5/21/2023 - [研究：全球湖泊超过半数正在干涸](https://www.dw.com/zh/研究：全球湖泊超过半数正在干涸/a-65676698?maca=chi-rss-chi-all-1127-rdf)
  ```一项最新研究显示，全球变暖和人类消耗正在导致全球湖泊干涸。```0
-  ## 5/21/2023 - [全球育儿成本韩国最高：钱都花在课外班了](https://www.dw.com/zh/全球育儿成本韩国最高：钱都花在课外班了/a-65674902?maca=chi-rss-chi-all-1127-rdf)
- ```研究显示，韩国是全球育儿成本最高的国家，为GDP的7.79倍，大量花费来自大量的课外补习班。中国位居第二，养育一个孩子到18岁的成本是人均GDP的6.9倍，其次是德国（3.64倍）和法国（2.24倍）。```0
   ## 5/21/2023 - [世界气象组织警告：未来五年将创下最热记录](https://www.dw.com/zh/世界气象组织警告：未来五年将创下最热记录/a-65668526?maca=chi-rss-chi-all-1127-rdf)
  ```世界气象组织表示，厄尔尼诺和温室气体的综合影响将导致气温飙升，并警告说：“我们需要做好准备。”```0
   ## 5/20/2023 - [又一脱口秀演员在中国遭封杀](https://www.dw.com/zh/又一脱口秀演员在中国遭封杀/a-65684797?maca=chi-rss-chi-all-1127-rdf)
@@ -105,5 +107,3 @@
  ```德国历史上最引人注目的文物盗窃案之一周二（5月16日）得以宣判，法院对柏林黑帮雷莫（Remmo）家族有组织犯罪团伙的五名成员作出了数项监禁判决。```0
   ## 5/16/2023 - [再創亞洲第一 台灣通過同志無血緣共同收養](https://www.dw.com/zh/再創亞洲第一-台灣通過同志無血緣共同收養/a-65632519?maca=chi-rss-chi-all-1127-rdf)
  ```台灣在同婚法案4週年前夕，16日在立法院會三讀修正通過，讓同婚雙方當事人之一方收養他方的子女或共同收養時，準用民法關於收養的規定，破除原本的血緣限制。同志家庭收養的現況是什麼？```0
-  ## 5/14/2023 - [德国人预期寿命低于多数西欧国家](https://www.dw.com/zh/德国人预期寿命低于多数西欧国家/a-65599686?maca=chi-rss-chi-all-1127-rdf)
- ```最新公布的一项研究显示，与其他西欧国家比较，德国人的平均预期寿命相对较低。一个重要原因是心血管疾病致死的比例较高。研究者强调，大多数心血管疾病本是可以预防的。```0
