--- a/新闻/法国国际广播电台.md
+++ b/新闻/法国国际广播电台.md
@@ -1,4 +1,8 @@
 
+  ## 6/3/2023 - [美国更加警惕中国威胁](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%B3%95%E5%9B%BD%E6%8A%A5%E7%BA%B8%E6%91%98%E8%A6%81/20230603-%E7%BE%8E%E5%9B%BD%E6%9B%B4%E5%8A%A0%E8%AD%A6%E6%83%95%E4%B8%AD%E5%9B%BD%E5%A8%81%E8%83%81)
+ ```法国报纸周六头条关注新闻各不相同，《费加罗报》头版关注为控制公路超速，法国加大部署监控摄像头。来关于中国方面的消息，美国国务卿布林肯表示自俄乌爆发战争，美国不会被该此分心，会更加警惕中国。法国经济学家指出30年全球经济繁荣已成过去，气候问题或将引发粮食危机，而中国已经大量储存谷物。美国防长在香格里拉峰会呼吁与中国军方开发沟通渠道，多对话避免冲突。```0
+  ## 6/3/2023 - [“六四”纪念馆曼哈顿开馆 与中国在当地总领事馆遥对](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E5%85%AD%E5%9B%9B-%E7%BA%AA%E5%BF%B5%E9%A6%86%E6%9B%BC%E5%93%88%E9%A1%BF%E5%BC%80%E9%A6%86-%E4%B8%8E%E4%B8%AD%E5%9B%BD%E5%9C%A8%E5%BD%93%E5%9C%B0%E6%80%BB%E9%A2%86%E4%BA%8B%E9%A6%86%E9%81%A5%E5%AF%B9)
+ ```1989年北京天安门“六四”运动的一些参加者和一些中国持不同政见者周五在纽约为世界上唯一的"纪念六四"博物馆揭幕，以纪念"中国人民的民主梦想"。开馆正值“六四”遭镇压34周年纪念两天前。```0
   ## 6/3/2023 - [艾尔多安宣誓就职 北约秘书长到场祝贺敦促放行瑞典入盟](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230603-%E8%89%BE%E5%B0%94%E5%A4%9A%E5%AE%89%E5%AE%A3%E8%AA%93%E5%B0%B1%E8%81%8C-%E5%8C%97%E7%BA%A6%E7%A7%98%E4%B9%A6%E9%95%BF%E5%88%B0%E5%9C%BA%E7%A5%9D%E8%B4%BA%E6%95%A6%E4%BF%83%E6%94%BE%E8%A1%8C%E7%91%9E%E5%85%B8%E5%85%A5%E7%9B%9F)
  ```土耳其总统埃尔多安(TayyipErdogan)在今天举行的仪式上宣示就职。艾尔多安在上周末赢得连任随后将任命新政府内阁成员。```0
   ## 6/3/2023 - [印度车难已报261人死亡 今被定为国家哀悼日](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20230603-%E5%8D%B0%E5%BA%A6%E7%81%AB%E8%BD%A620%E5%B9%B4%E6%9D%A5%E6%9C%80%E4%B8%A5%E9%87%8D%E8%BD%A6%E9%9A%BE%E5%B7%B2%E6%8A%A5261%E4%BA%BA%E6%AD%BB%E4%BA%A1-%E4%BB%8A%E5%A4%A9%E5%B7%B2%E7%BB%8F%E8%A2%AB%E5%AE%9A%E4%B8%BA%E5%9B%BD%E5%AE%B6%E5%93%80%E6%82%BC%E6%97%A5)
@@ -55,7 +59,3 @@
  ```美国称未来对核裁军的任何承诺都将取决于中国。这是美国官方第一次将中国放置美国核承诺与裁军前景的中心位置。此前，中国拒绝参见目前已经中断的吗与俄罗斯之间的核裁军谈判。美国官方称，美国也没有忽视俄罗斯核武器状况。```0
   ## 6/2/2023 - [中资加入 香港两大外资外卖平台被指可能违反竞争条款 允放宽餐厅合作条款](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230602-%E4%B8%AD%E8%B5%84%E5%8A%A0%E5%85%A5-%E9%A6%99%E6%B8%AF%E4%B8%A4%E5%A4%A7%E5%A4%96%E8%B5%84%E5%A4%96%E5%8D%96%E5%B9%B3%E5%8F%B0%E8%A2%AB%E6%8C%87%E5%8F%AF%E8%83%BD%E8%BF%9D%E5%8F%8D%E7%AB%9E%E4%BA%89%E6%9D%A1%E6%AC%BE-%E5%85%81%E6%94%BE%E5%AE%BD%E9%A4%90%E5%8E%85%E5%90%88%E4%BD%9C%E6%9D%A1%E6%AC%BE)
  ```在中国外卖平台美团进军香港不足十天，本地推动竞争的法定组织公布，香港两大网上外卖平台foodpanda及Deliveroo户户送，对合作餐厅施加独家或价格限制条款，有损竞争，「可能会妨碍新成立或小型的平台进入市场」。两大平台同意撤销或修改被指可能违反《竞争条例》的条款，维期三年。```0
-  ## 6/2/2023 - [欧盟为保选举安全 要求全境下架中国与俄罗斯软件设备与平台](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230602-%E6%AC%A7%E7%9B%9F%E4%B8%BA%E4%BF%9D%E9%80%89%E4%B8%BE%E5%AE%89%E5%85%A8-%E8%A6%81%E6%B1%82%E5%85%A8%E5%A2%83%E4%B8%8B%E6%9E%B6%E4%B8%AD%E5%9B%BD%E4%B8%8E%E4%BF%84%E7%BD%97%E6%96%AF%E8%BD%AF%E4%BB%B6%E8%AE%BE%E5%A4%87%E4%B8%8E%E5%B9%B3%E5%8F%B0)
- ```明年6月6日至9日间，欧洲联盟27个国家选民将投票选出新一届的欧洲议会议员，明年7月1日起议会和欧盟执委会人事都将换新。欧盟议会以高票赞成通过一份报告文件，明确警告外国干预选举，建议全欧盟范围下架来自中国与俄罗斯的平台，设备以及软件例如华为、中兴电讯、同方威视，以及俄国资安公司卡巴斯基（Kaspersky）、生物辨识公司NtechLab等。```0
-  ## 6/2/2023 - [俄罗斯发动一月内第6波夜袭 乌克兰称全部成功拦截](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230602-%E4%BF%84%E7%BD%97%E6%96%AF%E5%8F%91%E5%8A%A8%E4%B8%80%E6%9C%88%E5%86%85%E7%AC%AC6%E6%B3%A2%E5%A4%9C%E8%A2%AD-%E4%B9%8C%E5%85%8B%E5%85%B0%E7%A7%B0%E5%85%A8%E9%83%A8%E6%88%90%E5%8A%9F%E6%8B%A6%E6%88%AA)
- ```乌克兰今天报告已经拦截了所有俄罗斯昨夜今晨攻击乌克兰的导弹和无人机，这些导弹和无人机仍然是在夜间出动，袭击目标包括基辅。```0
