--- a/新闻/美国之音.md
+++ b/新闻/美国之音.md
@@ -1,4 +1,6 @@
 
+  ## 6/3/2023 - [美加海军执行罕见联合任务 舰船双双通过台湾海峡](https://www.voachinese.com/a/us-canadian-navies-stage-rare-joint-mission-through-taiwan-strait-20230603/7121461.html)
+ ```美国海军表示，周六，一艘美国和一艘加拿大军舰驶过台湾海峡，这是在北京和华盛顿因中国宣称拥有台湾主权而紧张局势加剧之际，在敏感水道执行罕见的联合任务。```0
   ## 6/3/2023 - [奥斯汀：不寻求冲突，但不会在欺凌和胁迫面前退缩，否认刺激中国武力攻台 ](https://www.voachinese.com/a/us-china-shangri-la-dialogue-taiwan-south-china-sea-20230603/7121408.html)
  ```美国国防部长奥斯汀6月3日在“香格里拉对话”会上发表的演讲中在强调伙伴关系对确保印太地区共同愿景的重要性时也对中国在印太地区咄咄逼人的行为表示关切。他说，美国不寻求冲突或对抗，但不会在欺凌和胁迫面前退缩。他还表示，台海冲突并不是迫在眉睫，也不是不可避免，但一旦爆发冲突将是毁灭性的。奥斯汀否认美国有意刺激中国武力攻打台湾。```0
   ## 6/3/2023 - [中印互驱记者关系降至新低，边境局势依然紧张或一触即发 ](https://www.voachinese.com/a/as-india-and-china-rivalry-escalates-will-new-delhi-and-beijing-slip-into-another-border-conflict-soon-/7121047.html)
@@ -40,5 +42,3 @@
 
  ](https://www.voachinese.com/a/cia-chief-made-secret-visit-to-china-in-bid-to-thaw-relations-20230602/7120284.html)
  ```美国中央情报局长威廉·伯恩斯（WilliamBurns）上个月曾经秘密前往中国访问，并与中方官员举行会谈。在美中高层沟通不畅的情况下，拜登总统派遣他最信赖的高层官员之一访问中国，表明了美国政府对美中关系急剧恶化的严重关切。```0
-  ## 6/2/2023 - [无功而返， 斡旋俄乌冲突的中国特使考虑第二次出访欧洲](https://www.voachinese.com/a/china-weighs-next-ukraine-peace-mission-after-first-yields-little-progress-20230602/7120028.html)
- ```中国负责斡旋俄乌冲突的欧亚事务特使李辉星期五（6月2日）表示，虽然他最近对俄乌以及其他一些欧洲国家的访问并未产生立即的效果，但北京正在考虑新一轮的促和使命。```0
