--- a/新闻/法国国际广播电台.md
+++ b/新闻/法国国际广播电台.md
@@ -1,12 +1,18 @@
 
+  ## 6/3/2023 - [美国与加拿大军舰联合穿越台湾海峡](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E7%BE%8E%E5%9B%BD%E4%B8%8E%E5%8A%A0%E6%8B%BF%E5%A4%A7%E5%86%9B%E8%88%B0%E8%81%94%E5%90%88%E7%A9%BF%E8%B6%8A%E5%8F%B0%E6%B9%BE%E6%B5%B7%E5%B3%A1)
+ ```据美国海军告示，一艘美国军舰和一艘加拿大军舰周六航行通过台湾海峡。路透社说，北京和华盛顿紧张局势加剧之际，美国与加拿大罕见在敏感水道称联合执行任务。```0
+  ## 6/3/2023 - [泽连斯基称乌军准备大反攻](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230603-%E6%B3%BD%E8%BF%9E%E6%96%AF%E5%9F%BA%E7%A7%B0%E4%B9%8C%E5%86%9B%E5%87%86%E5%A4%87%E5%A4%A7%E5%8F%8D%E6%94%BB)
+ ```乌克兰总统泽连斯基在周六发表的采访中表示，乌克兰准备发动期待已久的反攻，以夺回俄罗斯占领的领土。```0
+  ## 6/3/2023 - [德媒爆料仍有德国前飞行员在中国训练战机驾驶挣大钱](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E5%BE%B7%E5%AA%92%E7%88%86%E6%96%99%E4%BB%8D%E6%9C%89%E5%BE%B7%E5%9B%BD%E5%89%8D%E9%A3%9E%E8%A1%8C%E5%91%98%E5%9C%A8%E4%B8%AD%E5%9B%BD%E8%AE%AD%E7%BB%83%E6%88%98%E6%9C%BA%E9%A9%BE%E9%A9%B6%E6%8C%A3%E5%A4%A7%E9%92%B1)
+ ```少数前德国飞行员现在可能仍然在中国提供军事训练，并为他们的教练工作赚取巨额薪水。他们的活动对德国安全官员提出了敏感问题。揭露此事件的德国镜报称此事是可疑活动。```0
+  ## 6/3/2023 - [日美韩三国防长在新加坡举行会谈](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E6%97%A5%E7%BE%8E%E9%9F%A9%E4%B8%89%E5%9B%BD%E9%98%B2%E9%95%BF%E5%9C%A8%E6%96%B0%E5%8A%A0%E5%9D%A1%E4%B8%BE%E8%A1%8C%E4%BC%9A%E8%B0%88)
+ ```正在新加坡出席亚洲安全会议（香格里拉对话）的日本、美国、韩国防长6月3日在新加坡举行会谈。日本防卫大臣滨田靖一、美国国防部长奥斯汀、韩国国防部长李钟燮参加了会谈，此外，日本防卫大臣滨田靖一也与中国国防部长李尚福举行会谈。```0
   ## 6/3/2023 - [美国更加警惕中国威胁](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%B3%95%E5%9B%BD%E6%8A%A5%E7%BA%B8%E6%91%98%E8%A6%81/20230603-%E7%BE%8E%E5%9B%BD%E6%9B%B4%E5%8A%A0%E8%AD%A6%E6%83%95%E4%B8%AD%E5%9B%BD%E5%A8%81%E8%83%81)
  ```法国报纸周六头条关注新闻各不相同，《费加罗报》头版关注为控制公路超速，法国加大部署监控摄像头。来关于中国方面的消息，美国国务卿布林肯表示自俄乌爆发战争，美国不会被该此分心，会更加警惕中国。法国经济学家指出30年全球经济繁荣已成过去，气候问题或将引发粮食危机，而中国已经大量储存谷物。美国防长在香格里拉峰会呼吁与中国军方开发沟通渠道，多对话避免冲突。```0
   ## 6/3/2023 - [“六四”纪念馆曼哈顿开馆 与中国在当地总领事馆遥对](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E5%85%AD%E5%9B%9B-%E7%BA%AA%E5%BF%B5%E9%A6%86%E6%9B%BC%E5%93%88%E9%A1%BF%E5%BC%80%E9%A6%86-%E4%B8%8E%E4%B8%AD%E5%9B%BD%E5%9C%A8%E5%BD%93%E5%9C%B0%E6%80%BB%E9%A2%86%E4%BA%8B%E9%A6%86%E9%81%A5%E5%AF%B9)
  ```1989年北京天安门“六四”运动的一些参加者和一些中国持不同政见者周五在纽约为世界上唯一的"纪念六四"博物馆揭幕，以纪念"中国人民的民主梦想"。开馆正值“六四”遭镇压34周年纪念两天前。```0
   ## 6/3/2023 - [艾尔多安宣誓就职 北约秘书长到场祝贺敦促放行瑞典入盟](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230603-%E8%89%BE%E5%B0%94%E5%A4%9A%E5%AE%89%E5%AE%A3%E8%AA%93%E5%B0%B1%E8%81%8C-%E5%8C%97%E7%BA%A6%E7%A7%98%E4%B9%A6%E9%95%BF%E5%88%B0%E5%9C%BA%E7%A5%9D%E8%B4%BA%E6%95%A6%E4%BF%83%E6%94%BE%E8%A1%8C%E7%91%9E%E5%85%B8%E5%85%A5%E7%9B%9F)
  ```土耳其总统埃尔多安(TayyipErdogan)在今天举行的仪式上宣示就职。艾尔多安在上周末赢得连任随后将任命新政府内阁成员。```0
-  ## 6/3/2023 - [印度车难已报261人死亡 今被定为国家哀悼日](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20230603-%E5%8D%B0%E5%BA%A6%E7%81%AB%E8%BD%A620%E5%B9%B4%E6%9D%A5%E6%9C%80%E4%B8%A5%E9%87%8D%E8%BD%A6%E9%9A%BE%E5%B7%B2%E6%8A%A5261%E4%BA%BA%E6%AD%BB%E4%BA%A1-%E4%BB%8A%E5%A4%A9%E5%B7%B2%E7%BB%8F%E8%A2%AB%E5%AE%9A%E4%B8%BA%E5%9B%BD%E5%AE%B6%E5%93%80%E6%82%BC%E6%97%A5)
- ```印度官员今天报告，至此至少有261人在印度二十多年来最严重的铁路事故中丧生，昨天一列客运列车撞上另一列停运的货车后脱轨翻覆。```0
   ## 6/3/2023 - [印尼提乌战停战计划即刻遭谴责](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230603-%E5%8D%B0%E5%B0%BC%E6%8F%90%E4%B9%8C%E6%88%98%E5%81%9C%E6%88%98%E8%AE%A1%E5%88%92%E5%8D%B3%E5%88%BB%E9%81%AD%E8%B0%B4%E8%B4%A3)
  ```印度尼西亚国防部长苏比安托今天在新加坡举行的香格里拉国防和安全会议上提出了一项结束俄罗斯和乌克兰之间战争的计划，提及冻结战场敌对，战区与被俄罗斯占领区由联合国监督公投等，此举立即受到多数与会者的谴责。```0
   ## 6/3/2023 - [六四前夕传抖音下令禁转“坦克、成龙、天安门”等敏感图文](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E5%85%AD%E5%9B%9B%E5%89%8D%E5%A4%95%E4%BC%A0%E6%8A%96%E9%9F%B3%E4%B8%8B%E4%BB%A4%E7%A6%81%E8%BD%AC-%E5%9D%A6%E5%85%8B-%E6%88%90%E9%BE%99-%E5%A4%A9%E5%AE%89%E9%97%A8-%E7%AD%89%E6%95%8F%E6%84%9F%E5%9B%BE%E6%96%87)
@@ -53,9 +59,3 @@
  ```乌克兰敦促盟国大力军援炮弹，以弥补弹药吃紧以及酝酿战略反攻。美国正寻求从日本采购炸药，用于155毫米炮弹的生产，供应给乌克兰，以帮助乌克兰以反击俄罗斯军队。```0
   ## 6/2/2023 - [中国高规格接待了马斯克](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230602-%E4%B8%AD%E5%9B%BD%E9%AB%98%E8%A7%84%E6%A0%BC%E6%8E%A5%E5%BE%85%E4%BA%86%E9%A9%AC%E6%96%AF%E5%85%8B)
  ```特斯拉执行长马斯克自5月30日抵达中国到1日离境，受到官方拉高规格接待，其中包括正国级的中国国务院副总理丁薛祥及秦刚等3名部长。而他在中国网络上受到的瞩目，也非其他外企高管可比。美国媒体称，马斯克在中国是位名人，他的访问引起了中国网民的极大兴趣。中国官员利用马斯克访华之行来促进与美国的商业关系，尽管中国政府最近在以国家安全的名义打击一些外国公司。```0
-  ## 6/2/2023 - [美国债务违约躲过一劫](https://www.rfi.fr/cn/%E7%BE%8E%E6%B4%B2/20230602-%E7%BE%8E%E5%9B%BD%E5%80%BA%E5%8A%A1%E8%BF%9D%E7%BA%A6%E8%BA%B2%E8%BF%87%E4%B8%80%E5%8A%AB)
- ```美国参议院1日稍晚通过了一项涉及广泛的立法，暂停31.4万亿美元的债务上限并削减联邦开支，推进了总统拜登和众议院议长麦卡锡达成的旨在避免前所未有的美国违约的两党协议。```0
-  ## 6/2/2023 - [核武库：美国盯上中国](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230602-%E6%A0%B8%E6%AD%A6%E5%BA%93-%E7%BE%8E%E5%9B%BD%E7%9B%AF%E4%B8%8A%E4%B8%AD%E5%9B%BD)
- ```美国称未来对核裁军的任何承诺都将取决于中国。这是美国官方第一次将中国放置美国核承诺与裁军前景的中心位置。此前，中国拒绝参见目前已经中断的吗与俄罗斯之间的核裁军谈判。美国官方称，美国也没有忽视俄罗斯核武器状况。```0
-  ## 6/2/2023 - [中资加入 香港两大外资外卖平台被指可能违反竞争条款 允放宽餐厅合作条款](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230602-%E4%B8%AD%E8%B5%84%E5%8A%A0%E5%85%A5-%E9%A6%99%E6%B8%AF%E4%B8%A4%E5%A4%A7%E5%A4%96%E8%B5%84%E5%A4%96%E5%8D%96%E5%B9%B3%E5%8F%B0%E8%A2%AB%E6%8C%87%E5%8F%AF%E8%83%BD%E8%BF%9D%E5%8F%8D%E7%AB%9E%E4%BA%89%E6%9D%A1%E6%AC%BE-%E5%85%81%E6%94%BE%E5%AE%BD%E9%A4%90%E5%8E%85%E5%90%88%E4%BD%9C%E6%9D%A1%E6%AC%BE)
- ```在中国外卖平台美团进军香港不足十天，本地推动竞争的法定组织公布，香港两大网上外卖平台foodpanda及Deliveroo户户送，对合作餐厅施加独家或价格限制条款，有损竞争，「可能会妨碍新成立或小型的平台进入市场」。两大平台同意撤销或修改被指可能违反《竞争条例》的条款，维期三年。```0
