--- a/新闻/德国之声.md
+++ b/新闻/德国之声.md
@@ -1,4 +1,8 @@
 
+  ## 6/3/2023 - [美国中央情报局长秘密访问中国](https://www.dw.com/zh/美国中央情报局长秘密访问中国/a-65815540?maca=chi-rss-chi-all-1127-rdf)
+ ```一位不愿透露姓名的美国官员表示，中央情报局局长伯恩斯上个月秘密访问中国。这位情报官员进行过多次敏感的访问，包括在2021年底访问俄罗斯，讨论莫斯科准备入侵乌克兰的迹象。```0
+  ## 6/3/2023 - [“六四”临近 香港人如何悄悄纪念？](https://www.dw.com/zh/六四-临近-香港人如何悄悄纪念？/a-65815259?maca=chi-rss-chi-all-1127-rdf)
+ ```几十年来，香港一直是中华人民共和国境内唯一一个举行大规模纪念六四活动的地方。不过，2020年香港国安法出台后，这一传统就宣告中断。香港人正通过其他方式，努力保持对六四的记忆。纪念活动的主场则悄然移向海外。```0
   ## 6/3/2023 - [禽流感威胁哺乳动物 专家吁为家禽接种疫苗](https://www.dw.com/zh/禽流感威胁哺乳动物-专家吁为家禽接种疫苗/a-65815230?maca=chi-rss-chi-all-1127-rdf)
  ```研究显示，禽流感病毒正在迅速变化。尽管目前对人类的威胁仍然很低，但专家指出：哺乳动物感染禽流感的病例激增是个令人担忧现象。包含中国、越南等国家开始为家禽接种疫苗，以降低可能对人类造成的风险。```0
   ## 6/3/2023 - [印度三列火车相撞，至少280人遇难](https://www.dw.com/zh/印度三列火车相撞，至少280人遇难/a-65815142?maca=chi-rss-chi-all-1127-rdf)
@@ -37,8 +41,6 @@
  ```特斯拉首席執行官馬斯克6月1日結束炫風訪華行。有外媒報導，他週三曾與中國國務院副總理丁薛祥會晤，但中國官方尚未證實這項消息。```0
   ## 6/2/2023 - [俄控美用iPhone監控外交官 蘋果否認](https://www.dw.com/zh/俄控美用iphone監控外交官-蘋果否認/a-65800294?maca=chi-rss-chi-all-1127-rdf)
  ```俄羅斯聯邦安全局稱，他們發現美國政府入侵了俄羅斯數千支iPhone手機，其中包含其他國家在俄外交官的手機。網安公司卡巴斯基說，有數十名員工的設備在這次行動中遭到破壞，但該公司並未直接將此歸咎於美國。```0
-  ## 6/1/2023 - [欧洲议会投票 支持制定更严格的欧盟供应链法](https://www.dw.com/zh/欧洲议会投票-支持制定更严格的欧盟供应链法/a-65795847?maca=chi-rss-chi-all-1127-rdf)
- ```德国已有本国的供应链法。欧盟范围内的供应链法则正在制定中。欧洲议会、欧盟委员会和代表各成员国的欧盟理事会是制定法律的三方。```0
   ## 6/1/2023 - [德语媒体：对“去风险”，德国想的太天真](https://www.dw.com/zh/德语媒体：对-去风险-，德国想的太天真/a-65795713?maca=chi-rss-chi-all-1127-rdf)
  ```对中国的“去风险”战略，是近期德语媒体持续关注的话题。《世界报》指出，这一概念不像德国人想的那么简单。《柏林日报》认为，中国高层正在把欧洲作为拉拢的目标。.```0
   ## 6/1/2023 - [乌克兰何时加盟？北约各国仍存在分歧](https://www.dw.com/zh/乌克兰何时加盟？北约各国仍存在分歧/a-65794083?maca=chi-rss-chi-all-1127-rdf)
