--- a/新闻/法国国际广播电台.md
+++ b/新闻/法国国际广播电台.md
@@ -1,8 +1,8 @@
 
   ## 6/3/2023 - [美国与加拿大军舰联合穿越台湾海峡](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E7%BE%8E%E5%9B%BD%E4%B8%8E%E5%8A%A0%E6%8B%BF%E5%A4%A7%E5%86%9B%E8%88%B0%E8%81%94%E5%90%88%E7%A9%BF%E8%B6%8A%E5%8F%B0%E6%B9%BE%E6%B5%B7%E5%B3%A1)
- ```据美国海军告示，一艘美国军舰和一艘加拿大军舰周六航行通过台湾海峡。路透社说，北京和华盛顿紧张局势加剧之际，美国与加拿大罕见在敏感水道称联合执行任务。```0
-  ## 6/3/2023 - [泽连斯基称乌军准备大反攻](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230603-%E6%B3%BD%E8%BF%9E%E6%96%AF%E5%9F%BA%E7%A7%B0%E4%B9%8C%E5%86%9B%E5%87%86%E5%A4%87%E5%A4%A7%E5%8F%8D%E6%94%BB)
- ```乌克兰总统泽连斯基在周六发表的采访中表示，乌克兰准备发动期待已久的反攻，以夺回俄罗斯占领的领土。```0
+ ```据美国海军告示，一艘美国军舰和一艘加拿大军舰周六航行通过台湾海峡。路透社说，北京和华盛顿紧张局势加剧之际，美国与加拿大海军罕见在敏感水道联合执行任务。```0
+  ## 6/3/2023 - [泽连斯基称乌军已准备好大反攻：我们坚信我们将取得成功](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230603-%E6%B3%BD%E8%BF%9E%E6%96%AF%E5%9F%BA%E7%A7%B0%E4%B9%8C%E5%86%9B%E5%87%86%E5%A4%87%E5%A4%A7%E5%8F%8D%E6%94%BB)
+ ```乌克兰总统泽连斯基（VolodymyrZelensky）在周六发表的采访中表示，乌克兰准备发动期待已久的反攻，以夺回被俄罗斯占领的领土。```0
   ## 6/3/2023 - [德媒爆料仍有德国前飞行员在中国训练战机驾驶挣大钱](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E5%BE%B7%E5%AA%92%E7%88%86%E6%96%99%E4%BB%8D%E6%9C%89%E5%BE%B7%E5%9B%BD%E5%89%8D%E9%A3%9E%E8%A1%8C%E5%91%98%E5%9C%A8%E4%B8%AD%E5%9B%BD%E8%AE%AD%E7%BB%83%E6%88%98%E6%9C%BA%E9%A9%BE%E9%A9%B6%E6%8C%A3%E5%A4%A7%E9%92%B1)
  ```少数前德国飞行员现在可能仍然在中国提供军事训练，并为他们的教练工作赚取巨额薪水。他们的活动对德国安全官员提出了敏感问题。揭露此事件的德国镜报称此事是可疑活动。```0
   ## 6/3/2023 - [日美韩三国防长在新加坡举行会谈](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E6%97%A5%E7%BE%8E%E9%9F%A9%E4%B8%89%E5%9B%BD%E9%98%B2%E9%95%BF%E5%9C%A8%E6%96%B0%E5%8A%A0%E5%9D%A1%E4%B8%BE%E8%A1%8C%E4%BC%9A%E8%B0%88)
