--- a/新闻/自由亚洲电台事实核查.md
+++ b/新闻/自由亚洲电台事实核查.md
@@ -1,4 +1,6 @@
 
+  ## 6/3/2023 - [事实查核｜传播观察：六四前夕，社媒上的假帐号、假讯息](https://www.rfa.org/mandarin/shishi-hecha/hc-06032023083440.html)
+ ```「六四」事件34周年之际，「六四纪念馆」于美国纽约开幕，但就在开馆前，社媒平台上出现大量冒名「六四纪念馆」或者民运人士「王丹」、「吾尔开希」的假帐号；亚洲事实查核实验室注意到，这些帐号之中，有些是今年2月至5月才加入的新帐号，有些帐号则是5月特别活跃、密集发文，经比对他们近期推文，发现他们传播相同主题的假讯息。 「六四纪念馆」开幕在即网上出现大量假帐号 王丹5月30日在脸书与推特发文，并附上列出「六四纪念馆」假帐号的截图（下图）；他表示，「这种情况一方面说明当局已经视六四纪念馆为眼中钉，另一方面也等于变相证明了：六四纪念馆的建立，是对中共的有效地抵抗和打击。」 （图取自王丹脸书）  「六四纪念馆」原设于香港，2021年因《国安法》实施被迫关闭，王丹等民运人士开始募款，筹备在美国纽约重设。「六四纪念馆」真正官网推特号「@64博物馆」也公布收到的捐款金额与捐赠者名录，截至今年1月12日，收到捐款逾53万美元。 王丹发布的截图中有8个取名「六四纪念馆」的假帐号，它们除了名称、头像相同，发文内容也相似，大多声称「六四纪念馆」从未要求捐款、「@64博物馆」为诈骗的假冒帐号等错误资讯。明显希望压抑捐款人数和数量。  「六四纪念馆」推特假帐号 图取自推特。制表：亚洲事实查核实验室（资料统计至2023年6月1日）  其中，用户「@Bogdana94035980」主要发布嘲讽文，称欢迎各界随意破坏纪念馆、收到的捐款够挥霍一阵子等内容。此帐号今年2月才加入，发文数不多，但常回覆他人推文，尤其针对因汇整白纸革命资讯而成推特名人的「李老师不是你老师」，留言指控对方造谣。 推特还在「六四纪念馆」的假帐号下，推荐用户追踪王丹，但推荐的帐号却是冒王丹之名开设的假帐号。 推特在「六四纪念馆」假帐号下，推荐追踪名为「王丹」的假帐号。（图取自推特）  六四将近假帐号密集发文 王丹真实的推特号是「＠wangdan1989」，他5月17日发文，提醒网友注意盗用他名义开设的帐号（下图左），虽然此一假帐号已被封锁（下图右），但推特上还存在其他以王丹为名的帐号。 （图取自推特）  例如，取名王丹的用户「@MaisieRoby77722」今年4月加入推特，至今发了5则推文，其中5月25日推文写道：「距离“六四”纪念馆在纽约开幕只有10天的时间了，截止目前纪念馆共收款60余万元，离150万美元目标差距还是有点大。不过，没关系，美国政府当初已经答应通过渠道给我们50万美元，反正我们抹黑和攻击中国，美国还是很乐意的，我们可以说是一拍即合！」 用户「@MillerLynch16」显示2013年4月加入，截至今年6月1日，共6则推文，皆在今年5月15日至6月1日间发布，内容都和「六四纪念馆」有关，包括筹款活动经费已够、筹款活动停止、收款帐号出问题等，请支持者不要再汇款。 用户「@spdytrader」2009年2月加入，推文132则，过去常转发国际新闻与中国外交官的推文，但今年5月中起，开始发布与王丹、「六四纪念馆」有关的推文；例如，5月31日推文：「六四纪念馆」开幕在即，网上开始出现大量纪念馆官网的假帐号，这种情况说明纪念馆可能无法按时进行，请大家做好准备。再观察用户彼此的关系，可以发现「@Flanndner1」和「@TomasMcint14002」两个帐号分别在5月29日、6月1日发布文字、附图，甚至标点符号都一模一样的推文，两者在5月30日、31日也接连发布相同推文。亚洲事实查核实验室认为，这些在特定时间活跃的用户之间，具有一定程度的协同操作行为。 推特搜寻「吾尔开希」，出现一串名称、头像一样的帐号。（图取自推特）  在推特搜寻民运人士「吾尔开希」，也会出现一连串帐号，名称、头像都相同，有些用户名只差一个「i」或阿拉伯数字；多个以「吾尔开希」为名的帐号在今年3月至5月加入推特，已有部分帐号或文章遭删除，其中部分帐号的推文与回覆内容主要批评美国枪支暴力等问题。亚洲事实查核实验室截至6月1日尚未发现这些帐号发布与「六四纪念馆」相关的假讯息。 如何辨识真假帐号？ 以下为真正的「六四纪念馆」（下图左）、王丹（下图中）、吾尔开希（下图右）推特帐号。 六四纪念馆、王丹、吾尔开希推特帐号。（图取自推特）以「六四纪念馆」为例，用户名为纪念馆英译，其加入时间符合纪念馆开始筹备时间，地点在美国纽约，过往推文无可疑之处，追踪者人数明显较其它用户多，追踪者之中包括获蓝勾勾认证的王丹、周锋锁等人，这些辨识帐号的线索。 英国广播公司（BBC）文章整理出识破假帐号的四个关键：首先，是否有认证；第二，查看用户名称和图像，若用户名称出现随机数字或字母，有可能是机器生成的用户名称；第三，查看用户过去内容和追踪数；第四，查看内容或消息来源。 亚洲事实查核实验室（AsiaFactCheckLab）是针对当今复杂媒体环境以及新兴传播生态而成立的新单位。我们本于新闻专业，提供正确的查核报告及深度报道，期待读者对公共议题获得多元而全面的认识。读者若对任何媒体及社交软件传播的信息有疑问，欢迎以电邮afcl@rfa.org寄给亚洲事实查核实验室，由我们为您查证核实。```0
   ## 6/2/2023 - [事实查核 | 中国官媒民调：全球七成民众反对北约染指亚太 ？](https://www.rfa.org/mandarin/shishi-hecha/hc-06022023183139.html)
  ```标签：欠缺证据、误导一分钟完读：“全球多数受访者反对北约插手亚太”。中国国有媒体中央广播电视总台的外语频道中国环球电视网（CGTN）5月29日引述自己的民调报道称：日本首相岸田文雄24日证实北大西洋公约组织（NATO）计划明年在东京设联络处后，有高达七成的受访者表达“强烈反对”的立场。但亚洲事实查核实验室发现，这则报道只交代了调查在“CGTN多个语种官网平台上进行”，但完全没有提供民调的基础资料。除官网外，CGTN也曾在自己的官方推特账号上发起“是否同意北约在日本设联络处”民调，结果是赞成者远多于反对者。然而，CGTN删除了推特民调页面，在后来的报道中也没有交代删除的原因。综上，CGTN民调给出的“七成民众反对北约染指亚太”结论不可信，涉嫌误导民众。CGTN发布的关于70%民众反对北约染指亚太的报道截图图截取自CGTN官网深度分析：北约将在日本设立联络处的消息引起国际关注，CGTN于5月29日以英文、西班牙文及中文发表了相关报道。在英文报道中，CGTN提到，日前曾在“多语种网络平台”发起一次网络民调，结果高达71.1%受访者“强烈反对”北约的做法。报道指出，在不同的语种中，以西班牙语、法语、阿拉伯语和俄语的平台上，都有超过8成的受访者反对这一可能举措。如果以国家为单位统计，俄语受访者反对的比例最高，达到92%。在英语平台网站上反对比例最低，为54%。CGTN用西语发布的民调结果图截取自CGTN西语推特帐号"全球"民调报道欠缺调查方法民调机构“皮尤研究中心”（PewResearchCenter）的高级调查顾问基特（ScottKeeter）曾撰文解释民调如何运作，其中列出民调应该提供给受众的重要资讯应包括“访问了谁”、“访问多少人”、“执行方式”、“结果有无加权”和“问卷题目”等。基特认为，现在很多民调甚至不采随机抽样，而是通过各种技术让人民在网络上自愿、或选择参与调查，这些民调怎能准确代表人们？虽然有些执行单位会通过加权调整，但这种调查的代表性较差，也容易受到虚假受访者的影响——也就是没有资格参加调查或提供不真诚的答复。台湾民调专家戴立安6月1告诉亚洲事实查核实验室，CGTN并没有提供受访者的性别、年龄、教育程度、国别等详细资料。同时，在网络平台上执行调查本身就欠严谨，因为推特等社媒上有许多假账号，即使有几十万人提交问卷，不一定有样本代表性和真实性。CGTN在推特上做了什么？在这次民调过程中，CGTN在推特平台上的一次“删文”操作也引发了质疑。5月26日，CGTN在推特上发起投票，询问网民“是否支持北约到日本设立联络处”。美国联邦参议员克鲁兹（TedCruz）的前法案助理苏柏力克（MichaelSobolik）发现，CGTN又很快将推文删除了。苏柏力克的截图显示，至少到26日凌晨3时，投票推文仍是存在的，截至当时，有86.5%的参与者支持北约到日本设立联络处。亚洲事实查核实验室无法独立证实与查核CGTN删除推特投票的确切时间点。然而，上述推特上的即时投票情况，并不在CGTN后来发出的英文报道内容中，报道也没有提到CGTN自己在推特上删除了这一投票。戴立安认为，如果真的有删文情况，很可能是预期结果不如执行单位所想。若是一般专业单位，发生这种情况“必须要交代”，但CGTN此次调查恐怕并不是要反映民意，而是为倡议自己国家的立场。就”删除推特平台民调结果”一事，亚洲事实查核实验室致信CGTN询问原因，并希望了解究竟有多少人，在哪些平台参与了投票。至截稿时，CGTN都没有回复。CGTN刪除了推特平台的调查结果，但沒有交代原因。苏柏力克推文截图"民调"的诱导性问题亚洲事实查核实验室同时发现，CGTN设计的提问存在预设的前提，例如：提问一：日本作为一个有侵略别国历史的国家，近年来却寻求扩大自身军事实力。你担心吗？提问五：北约在美国的支持下，不断扩大军事势力范围，插手地区事务。你认为北约是否已成为美国维护霸权和追求政治利益的工具？戴立安对此批评，问卷虽然题目不多，“但每一题都充满诱导性”，问卷目的是为凸显执行单位的立场。他说：“CGTN的调查是‘pushpoll’（导向性民意调查），把立场塞给民众，所以是宣传，不是民调。”结论：一般来说，规范的民调结果报告都会交代其样本量、有效样本数、置信率、民调进行时间及抽样正负误差值等。而CGTN的民调结果发布只引述了自己官网上的调查结果，上述基础信息都没有给出说明。问题设计也具有导向性，还没有给出任何解释地删除了推特平台上的投票结果。基于以上情况，亚洲事实查核实验室认为，CGTN的这一民调本身欠缺科学性和可信度，CGTN基于这次民调发布的“全球逾7成受访者强烈反对北约染指亚太”的报道也是在误导舆论。亚洲事实查核实验室（AsiaFactCheckLab）是针对当今复杂媒体环境以及新兴传播生态而成立的新单位。我们本于新闻专业，提供正确的查核报告及深度报道，期待读者对公共议题获得多元而全面的认识。读者若对任何媒体及社交软件传播的信息有疑问，欢迎以电邮afcl@rfa.org寄给亚洲事实查核实验室，由我们为您查证核实。```0
   ## 5/31/2023 - [事实查核｜男警"跪颈压制"女子，"我不能呼吸"重现台湾？](https://www.rfa.org/mandarin/shishi-hecha/hc-05312023180757.html)
@@ -27,5 +29,3 @@
  ```2022年2月24日俄乌战以来，中国国家主席习近平迟未与乌克兰总统泽连斯基接触，直到今年春季传出乌克兰准备反攻，习近平于4月26日与泽连斯基通话，这也是俄乌开战后两人首次通话；中方坚持劝和促谈，并将派代表赴乌克兰等国访问与各方深入沟通。习泽通话当天，联合国大会一项议案提到“俄罗斯侵略乌克兰”，中国在全案表决时仍投下了赞成票，此举让外界猜测中国对俄乌战的态度有所改变。过去一年多，美国等西方国家持续强烈谴责俄罗斯入侵乌克兰，与俄罗斯“友好无止境”的中国则始终宣称对俄乌冲突保持中立，但相关研究与数据显示，中俄叙事存在一致性，中国政府及其控制的舆论环境，实际上协助宣扬俄罗斯关于战争的论点。近日，亚洲事实查核实验室与台湾民主实验室（DoubleThinkLab）、乌克兰公民组织DetectorMedia和研究机构IRIBeaconProject联合发布研究——“入侵乌克兰的一百天：中俄两国战争叙事比较分析”。研究报告显示，从俄军侵乌后100天内，中文信息空间的叙事以低成本的方式重复俄语叙事，并且，中俄两个信息空间中可观察到共同主题︰反美主义与反西方情绪、认定俄罗斯为受害者和英雄。俄乌战事进入第二年，类似传播现象仍在持续。亚洲事实查核实验室观察中国对俄乌冲突的叙事，发现，中国媒体仍经常转载俄方论点，但宣传重点有所调整，两个主题逐渐成为主流叙事：中国为“劝和促谈”的“英雄”、美国为“拱火浇油”的“反派”。 研究：俄乌战期间中国复制俄语叙事 上述报告收集了2022年2月12日至5月31日的叙事，选择三个话题进行分析：生物武器实验室理论、布查大屠杀、制裁俄罗斯。根据角色、故事寓意和操纵技巧分析叙事，其中将西方国家、俄罗斯、乌克兰等国家的角色进一步细分为英雄、反派、受害者、棋子。叙事分析表明，中国叙事在普通话信息空间中以低成本的方式重复俄语叙事，一种方法是在中文语境中间接或直接引用俄罗斯官员或媒体的言论。在生物武器实验室阴谋论中，俄罗斯在两个信息空间中都扮演了英雄和受害者的双重身份，中俄宣传都旨在推动一个叙事，即美国和乌克兰正在合作攻击俄罗斯。在针对俄罗斯制裁的叙事中，俄罗斯通常被描绘成受害者，且在中俄两个信息空间观察到的叙事都突出了西方机构和国际社会在俄罗斯制裁问题上存在分歧和对立。例如，在布查大屠杀的叙事中，很多媒体报道将西方社会描绘为反派，俄罗斯则被描绘为受害者，这些叙事格外注意将布查大屠杀的责任转嫁给乌克兰和西方。亦有其他机构发现，俄罗斯虚假信息使用的主要叙事在俄乌战争期间持续进行。美国国务院为揭露和打击外国宣传和虚假信息所设立的“全球参与中心”（GlobalEngagementCenter,GEC），在俄乌战周年之际发布“克里姆林宫为无理战争诡辩的谎言之年”报告，介绍俄罗斯虚假信息和宣传生态系统所采用的五种最主要的虚假言论：1)北约对俄罗斯的包围以及俄罗斯“不是侵略者”；2)“乌克兰挑衅”和“对顿巴斯的种族灭绝”；3)去纳粹化和去军事化；4)将战争从“去纳粹化”重新描述为“去撒旦化”；5)“捍卫俄罗斯主权”对抗西方。“全球参与中心”特使暨协调员鲁宾（JamesRubin）日前接受英国广播电台（BBC）访问时表示，中国一遍遍重复俄罗斯关于这场战争的谎言，重复俄罗斯对于生物武器主张的谎言，还称美国推动这场战争，这都是他们的虚假陈述。另据德国之声报导，鲁宾说，中国在全球范围内花费数十亿传播虚假信息，包括在乌克兰问题上完全与俄罗斯保持一致的虚假信息。 中国宣传主题劝和vs拱火 俄罗斯入侵乌克兰至今逾14个月，据台湾人工智慧实验室（TaiwanAILabs）所设置的未来媒体暨虚假讯息研究中心观测发现，中国外交部提到乌克兰、俄罗斯的次数在战争初期出现高峰，当年5月后减少，今年2月至4月显着增加。 中国外交部提到“乌克兰”、“俄罗斯”的次数，高峰出现在战争初期，去年5月后开始减少，到今年2月至4月显着增加。来源：台湾人工智慧实验室－未来媒体暨虚假讯息研究中心今年2月至4月发生许多重大事件，包括俄乌战周年、习近平访问俄罗斯、芬兰加入北约等；亚洲事实查核实验室检视中国外交官员近期有关俄乌冲突的发言，发现他们经常提及中国“劝和促谈”、美国“拱火”。这些高级别官员的观点，也经过中国国内媒体进一步传播、放大。 2023年2月20日至27日中国有关俄乌冲突的重点发言（亚洲事实查核实验室整理／制表）台湾人工智慧实验室（TaiwanAILabs）未来媒体暨虚假讯息研究中心查询中国外交部使用“劝和促谈”、“拱火”等关键字的次数，发现中国外交部在俄乌战初期说过，但今年2月至4月出现使用高峰。要注意的是，中方常用这两个词回应俄乌议题，但谈论台海情势时，也会指控美国拱火。 中国外交部每周提到“劝和促谈”（上图）、“拱火”（下图）的次数。来源：台湾人工智慧实验室－未来媒体暨虚假讯息研究中心今年2月以來，中国陆续发布“全球安全倡议概念文件”、“关于政治解决乌克兰危机的中国立场”，习近平访问俄罗斯前在俄媒发表文章，都可看出中国将自己角色定调为政治解决危机的倡导者、劝和促谈的推动者，站在正义和正确一边。习近平与泽连斯基通话后的中方声明更明确指出“核心立场就是劝和促谈”、“中方将坚持劝和促谈，为尽快止战停火、恢复和平作出自己的努力”。若套用本文开头所列举，按照报告中定义的角色类别，中国正塑造自己为“英雄”。面对美国等西方国家指控中国可能军援俄罗斯，中国否认向冲突的任一方提供武器，并塑造自己为遭污蔑抹黑的“受害者”。有关军援争议，中国一方面澄清，一方面借机传播美国等西方国家是向乌克兰战场输送致命性武器、大发战争财的“拱火”反派。外交部发言人毛宁在4月6日例行记者会直说，“美国还有北约这样的军事集团对乌克兰危机负有不可推卸的责任”，媒体也经常以“拱火”为题报导，例如新华网“一年了，美国还在给乌克兰危机拱火”，中新网“美国继续拱火，为乌克兰办‘兵棋推演’”等。 媒体借题发挥，放大虚假叙事 亚洲事实查核实验室观察到，在俄乌战争中，中方立场站在批评美国、北约，但外交官员在正式场合发言时，对某些较敏感议题表现相对克制。然而，不少有官方背景的媒体会在官方表态的基础上进一步解读、并增添误导、虚假的细节报道（参考：事实查核|中国促俄乌和谈，美国主张“战争不应停止”？）；而在观点评述时，中媒则经常直接单方面地引述俄国媒体、专家的评论。例如，拜登2月密访乌克兰时，外交部发言人汪文斌在记者会仅简短回应：“各方尤其是大国，应采取负责任态度，为劝和促谈创造条件，多做有利于政治解决的事，而不应火上浇油，更不能趁机牟利。”而环球网自2月20日至21日对拜登密访乌克兰发布多则具针对性的报导，以下列举三则：“拜登突访基辅再次宣布军援，梅德韦杰夫回应，提到一个问题”指出，俄罗斯联邦安全会议副主席梅德韦杰夫在社媒发文，指西方向基辅提供大量武器和资金，允许北约国家的“军事工业综合体”赚取大量资金，并“隐藏”武器以将其出售给世界各地的恐怖分子。“白宫谎报行程之后，拜登闪访基辅送5亿美元礼包”指俄新社称，俄罗斯科学院教授亚历山大．古谢夫认为，拜登此次访问乌克兰证明美西方已成为乌克兰冲突的直接参与方，意味着在美西方国家支持下，俄乌冲突对抗将继续进行下去。塔斯社称，俄罗斯独联体国家研究所副所长弗拉基米尔・扎里欣认为，拜登此举意在挑战普京。“拜登突访基辅在社交媒体引余波：网友质问‘为什么不去俄亥俄’？”一文大量引用推特网友说法，质疑拜登为何不去近日发生“毒列车事件”的俄亥俄州，并搭配嘲讽拜登的漫画、照片等。而且，这一篇又出现上述报导引用的俄国学者古谢夫与扎里欣。上列几则新闻，有的仅报导单一俄罗斯官员说法，有的虽然引述卫报、纽时等英美媒体报导拜登行程的内容，但在观点评述上，明显以俄罗斯媒体报导所访问的俄国学者为主。另一个案例是芬兰加入北约。中国外交官过去曾多次公开抨击北约东扩，但去年5月谈及有关芬兰申请加入北约时，中方称“重大的进展”，并表示会给中芬关系带来新的因素；芬兰于今年4月正式加入北约，中国官方并未对此表态。亚洲事实查核实验室注意到，中国官方相對冷处理芬兰入北约，但中国日报、央视等多家媒体报导了俄罗斯官方立场，俄罗斯官媒也引述所谓中国专家的分析，指芬兰加入北约将损害欧洲安全。从上述报导可见中国官媒持续引用俄罗斯官员或媒体的言论，以及中俄宣传协作的痕迹；另一方面，也展现出中国官员、官媒在宣传工作上的角色与分工。 结论 透过上述研究、台湾人工智慧实验室－未来媒体暨虚假讯息研究中心的数据资料，以及深入分析中国针对俄乌冲突的发言要点，我们发现，俄乌开战至今，中国对这场战争的叙事有其变与不变。不变的是，中国媒体的战争叙事始终和俄国媒体舆论保持一定程度的一致性；变化的是，在中国媒体和官方发言的战争叙事中，中国对自身角色定位随战事出现微妙转变，从初期官方表面上维持中立，欲置身事外，到后期更变为积极打造和平维护者的“人设”。 亚洲事实查核实验室总结观察到的现象：1)从俄乌开战至今，中国一直透过引述、转载等方式协助俄罗斯宣传，也持续将责任归咎于美国和西方；2)中国今年尤其频繁传播自己“劝和促谈”，指控美国“拱火浇油”，包括习近平与泽连斯基通话后的中方声明，也使用这两个词；3)涉及美国领导人出访、特定国家加入北约等较敏感议题，官方正式发言相对克制，由官媒借引述俄国官方、媒体说法，或是所谓国际专家分析，以达到批判目的。 亚洲事实查核实验室（AsiaFactCheckLab）是针对当今复杂媒体环境以及新兴传播生态而成立的新单位。我们本于新闻专业，提供正确的查核报告及深度报道，期待读者对公共议题获得多元而全面的认识。读者若对任何媒体及社交软件传播的信息有疑问，欢迎以电邮afcl@rfa.org寄给亚洲事实查核实验室，由我们为您查证核实。 附：入侵乌克兰的一百天：中俄两国战争叙事比较分析报告全文报告概览```0
   ## 5/4/2023 - [事实查核│各国从苏丹撤侨，美国却弃国民不顾？](https://www.rfa.org/mandarin/shishi-hecha/hc-05042023130402.html)
  ```标签：误导 一分钟完读： 苏丹4月15日发生夺权内战，伤亡惨重，各国陆续撤侨。中国外交部发言人华春莹29日在推特发文比较美中撤侨的不同，指中国派军舰顺利撤侨，美国政府迅速撤离使馆人员，却没有撤离美国公民的计划。中国媒体、社媒平台也有许多关于美中在苏丹撤侨的文章，将舆论导向“中国顺利撤侨，美国弃国民不顾”。亚洲事实查核实验室发现，美国撤侨速度也许较某些国家慢，但并非“弃国民不顾”。在苏丹爆发冲突后不久，美国已派军舰至苏丹外海待命，也采取措施联络在苏丹的公民以协助他们离开；美国国务院于29日宣布，由美国组织的车队已将逃离苏丹战火的美国国民和其他国家公民撤离到沿海城市苏丹港。 深度解析： 苏丹自2021年10月发生军事政变，局势动荡。今年4月15日，政府军和武装团体“快速支援部队”（RSF）爆发冲突，期间虽曾达成停火协议，仍未能阻止双方交战，造成数百人死亡、数千人受伤。苏丹局势持续恶化之下，美国、德国、英国、日本、韩国、中国等多个国家陆续展开撤侨行动。 中国藉撤侨大宣传 中国国防部新闻发言人谭克非29日表示，中国海军南宁舰、微山湖舰于北京时间4月26日至29日，从苏丹港撤离940名中国公民、231名外籍人员至沙特吉达港。新华社、央视等官媒大幅报道中国成功撤侨，新闻画面、照片中，军舰上挂著“欢迎祖国同胞回到温暖港湾”的红色横幅，撤离人员挥舞著五星红旗，受访者说:“强大的祖国是我们坚强的后盾！” 中国派往苏丹撤侨的军舰挂上了“习主席派军舰接大家回家”的横幅。(“帝吧”推文截图)华春莹29日在推特发文“最先vs.最后”，将其描述为中美之间的“又一区别”——在国外遇到危险时，美国官员先撤离，但中国外交官总是帮助公民撤离，最后才离开。这则推文搭配了一张图卡，左边图片是中国撤侨画面，并写道“中国已派2艘军舰撤离940名公民”；右边图片则是美国主流媒体所报道的美国撤侨行动，配文写道“美国政府迅速用飞机撤离美使馆工作人员，却没有由政府协调撤离美国公民的计划”。 中国外交部发言人推特截图观察者网微博视频号、中通社旗下“通说”等媒体都转发了华春莹的推文，网易等平台也出现许多比较美中从苏丹撤侨差别的文章，像是“中国火速撤侨任务完成，美国却不顾美公民生死”、“中国宣布成功撤侨，美国却丢尽了脸，关闭大使馆不管上万公民死活”等。 美国撤离苏丹做法遭批 4月22日，美国总统拜登下令美军协助撤离在苏丹的政府人员，并暂停美国驻苏丹大使馆的运作。美国政府以飞机撤离约70名使馆人员，其他国家也陆续撤离当地的政府人员或该国公民。但美国国务院仍表示，由于首都喀土穆的安全局势不明且机场关闭，目前由美国政府协调撤离美国公民并不安全，但政府仍致力于协助留在苏丹的美国公民在安全条件允许的情况下离开。据美国有线电视新闻网（CNN）等媒体报道，美国官员估计在苏丹约有1万6千名美国公民，多数为双重国籍，而且他们“并不想离开”。美国政府的反应引起人们不满，CNN、《华盛顿邮报》等媒体记者采访了在苏丹的美国人，有人感到被政府抛弃，有人说自己像是二等公民，他们也抱怨国务院毫无用处。从苏丹爆发武装冲突以来，国务卿布林肯（AntonyBlinken）、白宫国安顾问苏利文（JakeSullivan）、国安会战略沟通协调官柯比（JohnKirby）等官员都有回应关于撤侨的问题。综合美方官员的说法，政府2021年起便通过“旅游建议”等渠道警示民众勿前往苏丹，在苏丹内战后，也与当地的美国公民联系，并积极协助他们离开苏丹。而大规模撤离居住海外的美国公民并非政府的标准程序。上述官员的立场，其实在美国国务院领事事务局网站都有说明。在苏丹政府军与RSF同意延长停火协议后，美国政府展开大规模撤侨。据纽约时报报道，苏丹当地时间4月28日，载有约300名美国公民的车队从喀土穆出发，前往苏丹港，而美国的无人机一直在监控车队撤离路线。美国国务院29日发布声明指出，一支由美国组织的车队已将逃离苏丹战火的美国国民和其他国家公民撤离到苏丹港；美国在区域和国际合作伙伴的支持之下进行密集谈判，为上千外国和美国公民撤离创造了安全条件，包括这次的行动。也就是说，在华春莹发推比较美中撤侨之前，美国政府已采取行动大规模撤侨。事实上，在政府组织撤侨前，也已通过其它方式联系、协助在苏丹的美国公民。 美国从苏丹大规模撤离公民。(图取自美国驻吉达总领事馆推特账户)苏丹内战以来，美国政府做了什么？ 4月15日苏丹内战，布林肯便通过声明对外说明苏丹局势，并表示一直在与可能在该地区的美国公民沟通安全措施。美国国务院16日发布安全警示，指目前苏丹局势不明且机场关闭，尚无美国政府协调撤离的计划，建议留在原地避难；有意撤离的美国公民可填表，若遇紧急状况可致电联系。17日，布林肯分别与苏丹交战双方的两位将领谈话，“强调达成停火的急迫性”。据路透社报道，美国外交使团的车队17日在苏丹遭遇炮火袭击，所幸无人伤亡。此后，布林肯多次与交战双方及相关国际伙伴交谈，敦促苏丹停火，并于21日、24日、27日分别宣布达停火协议或同意延长停火。22日，美国暂停驻苏丹大使馆的运作，以军机撤离美国政府人员及家属，国务院并更新了对苏丹的旅游建议。美国海军协会新闻网24日报道，海军已先行部署驱逐舰特拉克斯顿号（USSTruxtun）到苏丹港附近，另派遣排水量高达7万8千吨的基地船路易斯·B·普勒号（USSLewisB.Puller）至苏丹外海待命，以支援国务院作业。国务院副发言人巴特尔（VedantPatel）在28日记者会表示，只有不到5000人与国务院联系希望能够离开苏丹；截至5月2日，美国政府协调组织了三个车队，让700人得以离开，而自苏丹爆发冲突以来，美国政府与盟友及合作伙伴一起帮助1千多名美国公民离开苏丹。 结论： 美国政府对于从苏丹撤侨行动的反应与速度，确实在国内引起质疑与抱怨，但自苏丹内战以来，美国政府持续通过多种管道联系、协助当地公民离开，并非外界所指控的毫无计划、弃国民不顾。中国官员、媒体藉美国民众批评声浪进行宣传，甚至在美国已大规模撤侨后，仍发布未经更新、不完整的资讯误导受众。 亚洲事实查核实验室（AsiaFactCheckLab）是针对当今复杂媒体环境以及新兴传播生态而成立的新单位。我们本于新闻专业，提供正确的查核报告及深度报道，期待读者对公共议题获得多元而全面的认识。读者若对任何媒体及社交软件传播的信息有疑问，欢迎以电邮afcl@rfa.org寄给亚洲事实查核实验室，由我们为您查证核实。```0
-  ## 5/2/2023 - [事实查核｜《开罗宣言》和《波茨坦公告》把台湾归还给了中华人民共和国吗？](https://www.rfa.org/mandarin/shishi-hecha/hc-05022023130021.html)
- ```标签：错误 一分钟完读 中国外交部长秦刚四月下旬在一场演讲中表示，1943年发表《开罗宣言》和1945年的《波茨坦公告》是两份证明北京政府对台湾拥有主权的历史文件。但亚洲事实核查实验室认定中国的主张是错误的。因为考察这两份文件发现，它明确规定了二战结束时日本投降的条件，包括放弃对台湾的控制权，并将台湾归还给中华民国。而且它们发表时，中华人民共和国根本还未建立。亚洲事实核查实验室认为，这两份宣言不能作为解决中华民国和中华人民共和国间关于台湾主权归属政治争端的依据，但秦刚等中国官员经常发表的类似声明，忽视了中华民国对台湾行使主权的既成事实。 深入分析 从1949年中国内战结束至今，统治中国大陆的北京政府声称自己是代表中国的唯一合法政府，并拒绝承认中华民国对台湾的事实主权。中共外交部长王毅在2022年9月的一次讲话中简明扼要地说：“中华人民共和国政府是代表整个中国（包括台湾）的唯一合法政府。”王毅也说：“上述具有法律约束力的国际文书（《开罗宣言》和《波茨坦公告》）已充分将台湾无论是从事实上还是从法律上归还给中国。”中国外交部长秦刚2023年4月21日在上海的一场公开演讲上再一次做出政策宣示：“台湾回归中国是二战后国际秩序的组成部分，《开罗宣言》白纸黑字写着，《波茨坦公告》清清楚楚印着。”外交部发言人华春莹随后发推文重申了这一主张。王毅和秦刚的声明都认为，上述两份宣言最初的意图正是解决中华民国和中华人民共和国之间关于台湾主权的争端。 开罗会议档案照片，左起：蒋中正、罗斯福、丘吉尔、宋美龄。《开罗宣言》或《波茨坦公告》可以确认台湾归属“哪个中国”吗？ 答案是：“不行。”卜睿哲(RichardC.Bush)目前担任布鲁金斯东亚政策研究中心(CenterforEastAsiaPolicyStudies,TheBrookingsInstitution)高级研究员，他也曾是美国在台协会理事主席，著有多本美中台关系著作。他对亚洲事实核查实验室表示，两份宣言的目的，并不是解决“中华民国是否应放弃对台湾的主权，改由中华人民共和国统治台湾”这样的问题。“这两份宣言主要是二战后台湾主权问题的谈判开始之前，各国发表的意向性声明。中华人民共和国的推理是错误的。”卜睿哲指出，考虑到在这两份宣言发布时，中华人民共和国甚至还没有宣布成立，使用这样的宣言来解决中华人民共和国和中华民国关于台湾的争端是不合逻辑的。中华人民共和国官员经常声称《开罗宣言》将台湾及其周边岛屿“归还给中国”，而不是原始条约中的完整措辞“中华民国”。在中国大陆印刷、发行的《波茨坦公告》，常常将文章开头的“中华民国国民政府”缩写为“中国国民政府”。这些看似微小的改变使中华人民共和国更容易声称该条约赋予他们对台湾的司法管辖权和主权。这些术语与原始措辞非常接近，听起来具有说服力，但又有所不同，可以回避中华民国仍然存在的棘手事实。卜睿哲表示，清朝自17世纪末至1895年期间在台湾保持了司法管辖权和主权，而中华民国自二战结束时台湾的日本军队投降以来一直完全控制着台湾。卜睿哲说：“这两份宣言只是关于二战后关于台湾归属的‘意向声明’。当时，国际上公认的战后领土转让机制是通过和约实现的。不过在太平洋战后签订的《旧金山和约》中，日本只放弃了对台湾的所有权，而没有将其划归给任何国家。”台湾前总统马英九任内非常重视《开罗宣言》将台湾交还中华民国的历史事实，曾经举办纪念展览。(照片取自台湾总统府新闻资料库)不过台湾国民党的主张认为中华民国与日本在1952年签订的《中日和约》中已经规定在1941年12月9日以前“所缔结之一切条约、专约及协定，均因战争结果而归无效。”换言之，1895年清朝签订的《马关条约》也因此失效。 结论 亚洲事实核查实验室发现，中华人民共和国官方声称《开罗宣言》和《波茨坦公告》证明台湾的领土最终必须由中华人民共和国统治的说法是错误的。这些文件明确表示日本需要将台湾归还给中华民国，但两份宣言的宗旨并不在解决中华民国和中华人民共和国之间关于台湾归属的争议。中华人民共和国的官员声明立场时，经常只采用有利于其自己政治目标的历史解释，同时忽视与这些解释相矛盾的事实。本案就是一个例子。 亚洲事实查核实验室（AsiaFactCheckLab）是针对当今复杂媒体环境以及新兴传播生态而成立的新单位。我们本于新闻专业，提供正确的查核报告及深度报道，期待读者对公共议题获得多元而全面的认识。读者若对任何媒体及社交软件传播的信息有疑问，欢迎以电邮afcl@rfa.org寄给亚洲事实查核实验室，由我们为您查证核实。```0
