--- a/新闻/法国国际广播电台.md
+++ b/新闻/法国国际广播电台.md
@@ -1,4 +1,10 @@
 
+  ## 6/3/2023 - [禁止纪念六四 香港警方今逮4人](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E7%A6%81%E6%AD%A2%E7%BA%AA%E5%BF%B5%E5%85%AD%E5%9B%9B-%E9%A6%99%E6%B8%AF%E8%AD%A6%E6%96%B9%E4%BB%8A%E9%80%AE4%E4%BA%BA)
+ ```在天安门运动34周年前夕，香港警方在街头逮捕了至少两名艺术家和另外两名人士。```0
+  ## 6/3/2023 - [针对朝鲜发射导弹 日本启用冲绳PAC-3也警惕中国](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20230603-%E9%92%88%E5%AF%B9%E6%9C%9D%E9%B2%9C%E5%8F%91%E5%B0%84%E5%AF%BC%E5%BC%B9-%E6%97%A5%E6%9C%AC%E5%90%AF%E7%94%A8%E5%86%B2%E7%BB%B3pac-3%E4%B9%9F%E8%AD%A6%E6%83%95%E4%B8%AD%E5%9B%BD)
+ ```为防备朝鲜发射“军事侦察卫星”，日本防卫省从约一个月前向冲绳县的宫古、石垣、与那国三岛运进了自卫队地对空拦截导弹“爱国者3”（PAC-3）。虽然这是为了应对零部件掉落等“万一事态”，但自卫队内部倾向于并未设想会发展到实际上击落的事态。有观点称，这是考虑到与台湾突发事态有关的中国大陆而进行的部队活动“预演”。```0
+  ## 6/3/2023 - [六四届临 北京看紧四通桥](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E5%85%AD%E5%9B%9B%E5%B1%8A%E4%B8%B4-%E5%8C%97%E4%BA%AC%E7%9C%8B%E7%B4%A7%E5%9B%9B%E9%80%9A%E6%A1%A5)
+ ```在天安门六四运动34周年前夕，中国首都警察星期六尽早出现在北京四通桥周围，去年11月底在那里发生了罕见的敌视政权的示威。```0
   ## 6/3/2023 - [美国与加拿大军舰联合穿越台湾海峡](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E7%BE%8E%E5%9B%BD%E4%B8%8E%E5%8A%A0%E6%8B%BF%E5%A4%A7%E5%86%9B%E8%88%B0%E8%81%94%E5%90%88%E7%A9%BF%E8%B6%8A%E5%8F%B0%E6%B9%BE%E6%B5%B7%E5%B3%A1)
  ```据美国海军告示，一艘美国军舰和一艘加拿大军舰周六航行通过台湾海峡。路透社说，北京和华盛顿紧张局势加剧之际，美国与加拿大海军罕见在敏感水道联合执行任务。```0
   ## 6/3/2023 - [泽连斯基称乌军已准备好大反攻：我们坚信我们将取得成功](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230603-%E6%B3%BD%E8%BF%9E%E6%96%AF%E5%9F%BA%E7%A7%B0%E4%B9%8C%E5%86%9B%E5%87%86%E5%A4%87%E5%A4%A7%E5%8F%8D%E6%94%BB)
@@ -27,8 +33,6 @@
  ```印度周五（6月2日）晚间发生三辆火车相撞重大事故，救灾官员表示，已知造成至少288人死亡，850人受伤，死伤人数仍在攀升，这是印度逾20年来最惨重的铁路事故。```0
   ## 6/3/2023 - [美国防长呼吁中国军方开放沟通渠道 避免冲突](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E7%BE%8E%E5%9B%BD%E9%98%B2%E9%95%BF%E5%91%BC%E5%90%81%E4%B8%AD%E5%9B%BD%E5%86%9B%E6%96%B9%E5%BC%80%E6%94%BE%E6%B2%9F%E9%80%9A%E6%B8%A0%E9%81%93-%E9%81%BF%E5%85%8D%E5%86%B2%E7%AA%81)
  ```美国防长奥斯汀于6月3日在“香格里拉对话”亚洲安全峰会上呼吁中国国防和军事领导人开放沟通渠道，避免冲突促进亚洲地区稳定。```0
-  ## 6/2/2023 - [印度东部发生火车意外 至少50死 数百人受伤](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20230602-%E5%8D%B0%E5%BA%A6%E4%B8%9C%E9%83%A8%E5%8F%91%E7%94%9F%E7%81%AB%E8%BD%A6%E6%84%8F%E5%A4%96-%E8%87%B3%E5%B0%9150%E6%AD%BB-%E6%95%B0%E7%99%BE%E4%BA%BA%E5%8F%97%E4%BC%A4)
- ```6月2日星期五，印度东部奥迪沙邦发生火车意外，导致至少50人死亡，数百人受伤。```0
   ## 6/2/2023 - [在中国，埃隆·马斯克展示了他是怎样的两面派](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%B3%95%E5%9B%BD%E4%B8%96%E7%95%8C%E6%8A%A5/20230602-%E5%9C%A8%E4%B8%AD%E5%9B%BD%EF%BC%8C%E5%9F%83%E9%9A%86%C2%B7%E9%A9%AC%E6%96%AF%E5%85%8B%E5%B1%95%E7%A4%BA%E4%BA%86%E4%BB%96%E6%98%AF%E6%80%8E%E6%A0%B7%E7%9A%84%E4%B8%A4%E9%9D%A2%E6%B4%BE)
  ```世界首富埃隆·马斯克在对中国的三天访问期间受到了中国高规格的接待。周五，法国世界报就马斯克的姿态及其两面派语言刊发了社论。```0
   ## 6/2/2023 - [为阻止朝鲜开发核导弹，韩国强调要切断朝鲜资金链](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20230602-%E4%B8%BA%E4%B8%BA%E9%98%BB%E6%AD%A2%E6%9C%9D%E9%B2%9C%E5%BC%80%E5%8F%91%E6%A0%B8%E5%AF%BC%E5%BC%B9%EF%BC%8C%E9%9F%A9%E5%9B%BD%E5%BC%BA%E8%B0%83%E8%A6%81%E5%88%87%E6%96%AD%E6%9C%9D%E9%B2%9C%E8%B5%84%E9%87%91%E9%93%BE)
@@ -55,7 +59,3 @@
  ```中国的乌克兰问题特使李辉周五在结束欧洲之行后返回北京。李辉借机说，有许多困难正在阻止俄罗斯和乌克兰在目前的情况下开始和平谈判。俄罗斯对李辉指责乌克兰是障碍。乌克兰对李辉说，乌克兰不接受割地冻结俄罗斯占领领土状况的停火谈判。```0
   ## 6/2/2023 - [台湾与美国21世纪贸易倡议协定应有后续](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20230602-%E5%8F%B0%E6%B9%BE%E4%B8%8E%E7%BE%8E%E5%9B%BD21%E4%B8%96%E7%BA%AA%E8%B4%B8%E6%98%93%E5%80%A1%E8%AE%AE%E5%8D%8F%E5%AE%9A%E5%BA%94%E6%9C%89%E5%90%8E%E7%BB%AD)
  ```台湾与美国关于21世纪贸易倡议首批协定1日于华府美国在台协会（AIT）总部由台湾驻美代表萧美琴与AIT执行理事蓝莺（IngridLarson）代表双方签署，据台湾行政院经贸谈判办公室强调，这项协定为台美经贸打下坚实的法律基础，未来极有机会发展为更广泛的自由贸易协定，且有助于台湾参加跨太平洋伙伴全面进步协定（CPTPP）。而协议下阶段议题与启动时程，目前考虑先处理劳工、环保与农业3个议题，但需要台湾再跟美方确认。```0
-  ## 6/2/2023 - [美国可能采购日本炸药以生产炮弹军援乌克兰](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20230602-%E7%BE%8E%E5%9B%BD%E5%8F%AF%E8%83%BD%E9%87%87%E8%B4%AD%E6%97%A5%E6%9C%AC%E7%82%B8%E8%8D%AF%E4%BB%A5%E7%94%9F%E4%BA%A7%E7%82%AE%E5%BC%B9%E5%86%9B%E6%8F%B4%E4%B9%8C%E5%85%8B%E5%85%B0)
- ```乌克兰敦促盟国大力军援炮弹，以弥补弹药吃紧以及酝酿战略反攻。美国正寻求从日本采购炸药，用于155毫米炮弹的生产，供应给乌克兰，以帮助乌克兰以反击俄罗斯军队。```0
-  ## 6/2/2023 - [中国高规格接待了马斯克](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230602-%E4%B8%AD%E5%9B%BD%E9%AB%98%E8%A7%84%E6%A0%BC%E6%8E%A5%E5%BE%85%E4%BA%86%E9%A9%AC%E6%96%AF%E5%85%8B)
- ```特斯拉执行长马斯克自5月30日抵达中国到1日离境，受到官方拉高规格接待，其中包括正国级的中国国务院副总理丁薛祥及秦刚等3名部长。而他在中国网络上受到的瞩目，也非其他外企高管可比。美国媒体称，马斯克在中国是位名人，他的访问引起了中国网民的极大兴趣。中国官员利用马斯克访华之行来促进与美国的商业关系，尽管中国政府最近在以国家安全的名义打击一些外国公司。```0
