--- a/新闻/自由亚洲电台亚太.md
+++ b/新闻/自由亚洲电台亚太.md
@@ -1,4 +1,6 @@
 
+  ## 6/3/2023 - [民主女神像前 华盛顿举办六四烛光悼念活动](https://www.rfa.org/mandarin/yataibaodao/renquanfazhi/wy-06032023092053.html)
+ ```1989年六四大屠杀三十四周年纪念日前夕，华盛顿人权组织“共产主义受难者纪念基金会”于6月2日在华盛顿举行了该组织第十届六四烛光悼念活动。天安门民主运动的亲历者，和维吾尔族、藏族以及香港人的代表均在活动中发言。 六四34周年特别报导：接过广场上话筒的女青年纽约六四纪念馆开幕六四领袖重申追求自由中国决心六四34周年特别报道：拾起火把，前行! 纪念仪式的地点位于离华盛顿中国城仅几个街区的民主女神像前的小广场。这座雕像几乎完全仿照1989年民主运动期间，树立在天安门广场上的民主女神像复制而成，但材质已经换成了铜质，尺寸缩小。傍晚路灯亮起后，高大的路灯映照在女神像托起的火炬上，闪着红色的光芒，仿佛那团民主的烈火从未熄灭。小广场夹在三条道路之间，只是一个狭窄的三角形小广场，但在仪式举行期间，这里仍然挤进了五十人左右，既有中国面孔，也有美国民众，越晚人越多。前美国国会众议员弗兰克·沃尔夫（FrankWolf）在仪式上发言说，“我们都记得当年在电视上看到的天安门民主示威活动的景象，军队的坦克冲进了广场，杀死手无寸铁的示威者，碾压车辆，留下满地流血的尸体。”前美国国会众议员弗兰克·沃尔夫（FrankWolf）在仪式上发言。(记者王允拍摄)沃尔夫回顾了1991年，他和另一位国会众议员克里斯.史密斯（ChrisSmith）到北京去要求会见仍被关押的八九民运的参与者。他强调，这么多年过去了，中国政府仍在无差别地迫害不同族群，包括基督徒、藏传佛教徒、维吾尔族穆斯林民众以及法轮功成员。他在提到新疆受迫害的穆斯林民众时特地提高了声音，三次重复了“种族灭绝”这个词。华盛顿人权组织“公民力量”创办人杨建利作为1989年天安门民运亲历者在活动中发言。他借用中国的老话，“白发人送黑发人”，以示对当年在六四大屠杀中遇害的青年人的哀悼。他感叹说，哀伤无以复加，而悲痛从未中止。但杨建利又欣慰地说，去年发生的白纸运动呼应了当年的天安门民主运动，正如三十多年前天安门广场上的青年人一样，这一代年轻人也要求有透明、负责任的政府，和政治自由。美国维吾尔人协会会长爱丽飞达尔.艾力特比尔（ElfidarIltebir）和国际声援西藏运动(ICT)组织研究总监布琼次仁(BhuchungK.Tsering)分别代表自己的族群在活动中发言。美国维吾尔人协会会长爱丽飞达尔.艾力特比尔（ElfidarIltebir）代表自己的族群在活动中发言。(记者王允拍摄)香港民主活动人士邵岚在仪式上回顾了自己成长过程中逐渐认识中国政府专制本质的过程。她惋惜地说，在2019年反送中运动之后，香港固有的法治、民主等传统统统被中国政府剥夺了。她强调，香港人还在坚持抗争，但她追问说，看看国际社会对帮助香港人都做了什么？仪式的最后，众人手举点燃的蜡烛为六四死难者默哀半分钟。但仪式结束后，人们仍旧聚集在民主女神像前，久久不愿离去。多位来参加仪式的香港年轻人在神像前集体唱起了《愿荣光归香港》，歌声激越，在傍晚的街道上远远地飘散开去。仪式的最后，众人手举点燃的蜡烛为六四死难者默哀半分钟。(记者王允拍摄)记者：王允   编辑：申铧   网编：杰西```0
   ## 6/2/2023 - [王丹身陷性骚扰指控  "李元钧"首次接受采访](https://www.rfa.org/mandarin/yataibaodao/zhengzhi/wy-06022023123844.html)
  ```6月2日是纽约六四纪念馆正式开幕的日子。正在纽约主持开幕式的八九民运领袖王丹却忽然被台湾男子"李元钧"在社交媒体脸书上指控遭到了对方的性骚扰。本台在第一时间采访到了王丹和"李元钧"双方的说法。 纽约六四纪念馆开幕六四领袖重申追求自由中国决心 6月2日早上纽约时间9点40分，离纽约六四纪念馆正式开幕的时间还有20分钟。本台记者在纪念馆现场问到王丹对性骚扰指控的回应，他说，“一句话，完全没有的事情，既然是完全没有的事情，我也没办法做任何回应，对不对？”王丹的声音背景里是纪念馆现场人群嘈杂的声音。突然而至的指控这一指控是北京时间6月2日下午4点左右出现在脸书上的。账号名为“李元钧”的男子在脸书上贴出一张配图，背景上是悼念1989年六四大屠杀的烛光晚会的模糊景象，中间是四个醒目的白色中文大字“请你道歉”。在贴文中，“李元钧”详述了9年前的2014年6月6日，王丹在纽约法拉盛一家饭店的房间里强吻他，并强暴未遂的过程。接着，“李元钧”又讲述了其它一些细节。“李元钧”在贴文中还说，王丹此后几天一直在语言上骚扰他，“接下来的一周，我却持续面临他时不时的言语挑逗、性骚扰笑话，以及持续明示暗示我，希望我跟他一起睡。”“李元钧”还告诉本台那次美国之行的一些背景，“2014年6月的时候，我刚认识王丹没多久，他便邀请我到美国去，那个时候我才不到20岁。对我来说，王丹是一个名人，我当时对他非常憧憬，能被他邀请到美国，当然是我的荣幸。”但“李元钧”并没有解释当时王丹邀请他的原因。谢姓助理是谁？“李元钧”说，当时王丹身边还有一个谢姓助理，对他的性骚扰是在谢姓助理离开的情况下发生的。事发后，“李元钧”把情况告诉这位助理，但助理并没有提供任何帮助，只是说，王丹是在跟他开玩笑，是在闹他。“李元钧”在稍后的一个脸书贴文中公布了当时他和谢姓助理短信的截图。但这位谢姓助理是谁，“李元钧”并没有公布，本台尚无法查证。“李元钧”在这次旅行后回到台湾。他在贴文中说，他在美国时人生地不熟，也不知道报警，不知道该怎么办，所以一直忍耐。但这件事是他此生最害怕的时光之一，他曾经把自己关在出租屋内好几天，哭泣并恐惧，试图忘记这次美国之行。“李元钧”坦诚自己是同性恋的身份，并表示他曾将美国之行发生的事情，告诉共事过的台北市议员林亮君和当时还在任的台北市议员邱威杰（呱吉）。一个"不惊讶" 一个"不意外"“李元钧”在贴文里强调，此后每到6月4日前后，王丹出面发言的日子，他就感到恶心和不安，“我害怕这个人、我害怕听到他的声音、我害怕看到他的样子。”对于在今年六四前公开此事，“李元钧”告诉本台，他并不是趁这个日子，而是因为最近在台湾有不少政治工作者提出了他们在职场上遭到的性骚扰指控，“这些事情对我影响很大，对我来说，也给了我很多鼓励；我觉得刚好在这个时间点，如果我现在不说的话，我不知道还有什么时候能有勇气把这段话说出来。”据台湾中央社报道，影集《人选之人－造浪者》编剧之一的简莉颖也在6月2日当天在脸书发表长文，指控大学时期曾遭中国流亡诗人贝岭性骚扰。但贝岭对外界回应称，这完全是一个杜撰。对于“李元钧”在六四前公开此事，王丹告诉本台，“我就让外界去判断，我也不想说什么。我想大家都很清楚，我也没必要说什么。”王丹在美国东部时间6月2日早上听闻这一指控后，很快在脸书发帖回应说，他对此有点无奈，但也并不惊讶，这位作者所提的性骚扰一事完全不存在。他同时也表示自己很忙，而他的政治活动不会受到任何影响。他在推特上回应他人询问时也做出了类似的表述。“李元钧”随即在脸书上发帖说，他对王丹这样的回应不意外，但令人失望。他质问说，“就事论事、坦诚错误，一句对不起就这么困难吗？”“李元钧”告诉本台，除了已经公布的与谢助理的短信记录外，他手里还有一些证据，“我还有其他一些在美国留下来的照片和录音，但我还是希望老师可以，希望王丹可以好好面对自己的过错，不要等到我把这些资讯公开出来后，再来说更多的谎，来圆更多的这个其实不该说的谎。”本台记者注意到，到截稿时为止，王丹已经删除了他在推特上有关此事的回应。 记者：王允（记者唐缘媛、黄春梅、夏小华对报道有贡献）  责编：梒青   网编：洪伟```0
   ## 6/2/2023 - [六四34周年特别报导：接过广场上话筒的女青年](https://www.rfa.org/mandarin/yataibaodao/zhengzhi/al-06022023095528.html)
@@ -27,5 +29,3 @@
  ```六四事件即将迎来34周年，被中共当局定性的这场"动乱"，相关信息至今仍在中国遭到封杀。自由亚洲电台《亚洲很想聊》节目就此采访吴仁华、郑旭光两名六四亲历者，揭示中国当局如何对海内外舆论进行记忆消除和窜改历史的工程，而他们又是如何在被极权掩盖的破碎讯息中，保存并传播真相。 六四前夕许志永狱中呼吁　以禁食悼念"六四"三十四年不改的心志　纽约六四纪念馆筹建纪实 “六月四日清晨六点多，随学生撤离，经过西长安街、六部口。中南海大门、新华门附近，三辆戒严部队坦克从背后高速追压学生队伍，来不及避难学生受伤、死亡，十一人死，受伤更多，其中有五具死难者学生遗体被送到我任职的中国政法大学。当天上午十点左右，一进校门，看到教学大楼一排课桌上放着五具死难者遗体，课桌上、地面都是一漥洼的鲜血。我和天安门广场的青年教师刘苏里长跪在五具遗体前痛哭，默念永不遗忘。”前中国政法大学助理研究员吴仁华在《亚洲很想聊》节目中，说出驱动他三十余年来研究不辍，陆续出版《六四天安门血腥清场內幕》、《六四屠杀内幕解密》、《六四事件全程实录上、下》三本书，就因亲历那场屠杀。吴仁华说：“我花了无数时间，破解各部队番号、代号，搜集相关官兵聊天纪录，赫然发现戒严部队人数二十五万，十九支部队，其中有十四个陆军集团军，非常惊人的规模。”六四亲历者吴仁华三十余年研究不辍，调查六四真相，出版书籍让年轻人不忘历史。（记者夏小华摄）二十年后追查出涉辗压学生的戒严部队官兵 吴仁华放声痛哭吴仁华认为，真相要完整，更须追查加害者。他针对四十九万官兵资料，透过互联网、谷歌一一验证出三千多名曾参与北京戒严部队成员，大海捞针，从他们与战友间的聊天过程，找到参与在六部口，从背后高速追压学生的天津警备区坦克第一师第一团一零六号坦克二炮手“吴彦辉”。吴仁华说：“终于验证,很确切的身份，当时我趴在电脑前痛哭。  读过那么多古书里头的血腥场面都没法比拟，很多人包括在六部口失去双腿、体育学院学生方政、天安门母亲丁子霖老师都一再说，要找到一零六号坦克里的成员，为何调头从背后冲入学生队伍？是驾驶员擅自行动还是车长命令？我在书里清楚纪录，天津第一师第一团团长罗刚、副团长贾振禄，我都忘不了他们名字。我在推特上公布吴彦辉的号码，是不是当年第一师第一连第一营第一排一零六号坦克二号手？吴说是他。他以为战友找他。推友又把通话纪录发推，令很多推友非常激动。” 八九民运重要领导成员郑旭光（节目截图）六四后各单位清查 郑旭光：“忘记了”、“没看到”等于“解脱”八九六四即将三十四年，为何中国有人对天安门广场发生过的部队辗压学生的事情“没有记忆”或“不敢有记忆”？八九民运重要领导成员，六四之后成为二十一名官方发布的通缉犯之一，服刑两年的郑旭光在节目上对此有深刻的描述。他提到，六四大屠杀后，各单位全面清查，城市内大部份在体制内生存，任职行政、企业、事业单位，都属国家部门，受党组织管。所有人必须交代，八九年从胡耀邦去世后自己跟这运动有什么关系：“你是否上街了？你知道有其他人什么情况？你是什么情况？戒严前你怎么做？戒严后你怎么做？六四开枪后你怎么做？”郑旭光表示，当局用三阶段区分，比如六四再上街和戒严后再上街完全不同。悼念期间上街可能作一般处理，对抗戒严令罪加一等，清场之后还在抵抗那又是另一个情况。很多单位领导不愿让大家受到挫折，就会让你只说自己不说别人。《亚洲很想聊》主持人戴忠仁（左）、前中国政法大学助理研究员吴仁华（右）（节目截图）被迫对官方表态 亲历者为免责成定性“平乱”帮凶郑旭光说：“相信很多人都说不记得、没有看过，得过且过，就算解脱、合格过关。如果没有别人佐证，在这情况下可能你就会说没有参与。你见谁都会说没参与，你怕别人举报你。”郑旭光提到，更重要的是，对党和政府的反对动乱、平息反革命暴乱必须表态。相信在那样的环境下，反对是极少数。因为反对就没有公职，工资没处领，绝大部分人表示坚决支持。郑旭光说：“支持的结果就是，‘暴徒打了、杀死了解放军，是一种动乱，参与的人大部分是不明真相，是被少数坏人利用，坏人需要坚决严惩’，这是一整套的说词，日复一日、年复一年你就要重复的。有时你要被调查，是不是像文革三种人、造反派、打砸抢分子？你是不是参与过八九动乱？你是什么态度？这都是你在体制内攸关调动、升迁，各种各样都有关联的事。”官方透过集体恐惧  重构历史叙事郑旭光说：“中国有一种很强的耻感文化，很难坚持说我是因为怯懦，我是因为种种原因说了亏心话，办了亏心事。最后他慢慢心理记忆会转变，会认为确实是被坏人利用；甚至有很激进的学生最后都自称是无辜的、党是对的，甚至说这些年中国经济大发展幸亏邓小平出手很准，一切源于镇压之后经济就好转，再也没有人乱。就整个重新叙事，官方有官方的叙事，它比较僵化；在民间有民间另一套主流叙事。在当时的压力之下，被迫否认自己、否认自己的同伴，最后它完成一个转换。我可以说，八九年如果说是全民抗议运动，八九之后就经历了一场全民叛变运动。”吴仁华也提到，曾有中学生翻墙看他的书，了解真相后去问他的母亲，母亲谎称没这事。学生追问母亲，八九时不是在北京读大学，怎会啥都不知？母亲才被迫承认。在专制体制下，提真相会付很大政治后果。郑旭光也说，六四是非常痛苦难堪的记忆，经历八九六四那一代，很多宁愿不提。不光自己痛苦，要给孩子回答也很尴尬，是支持还是反对？所以不说为好。这永远是一块精神创伤，需要治愈。至于八九后出生的一代，渠道多元，有网路可翻墙。中共透过外宣对海内外进行六四认知作战 但吴仁华提到，中共利用很大资源发动大外宣、海外社交媒体进行六四历史窜改，很多年轻朋友感谢他挖掘真相。提到近日热门的ChatGpt网络聊天机器人，郑旭光说，他试过用繁体中文和简体中文发问，却得到不同结果。用简体中文问，得到的都是中国官方对六四的说词。郑旭光提到，邓小平接见戒严部队指挥官时用了这场“风波”，刻意回避清场时用北京已发生反革命暴乱的字眼。另从领导阶层的讣告可看出官方态度，杨尚昆去世时尽量淡化，李鹏讣告又回到八九六四定性严厉“暴乱”的重现，可见习近平为首的中共领导人的看法。学者呼吁建立“六四学”共同挖掘历史真相对抗遗忘针对平反八九民运是否有任何希望的问题，郑旭光认为，当年该负责的中共高层都过世了，戒严部队垂垂老矣，看来官方就是“耗着”，把当事人、有记忆的人都耗死为止。吴仁华认为，中国只有发生政治体制变革才可能面对六四。一九九零所谓六四平暴第一年，解放军中央军委曾计划隆重庆祝表彰，被中央政治局负责意识型态的常委否决。中国官方很清楚，这件事不光彩，不值得去做宣传。 吴仁华说，六四比五四运动更重要，海内外却缺乏“六四学”，六四真相至今死亡人数都没个结论，希望更多学校、师生投入“六四学”研究。记者：夏小华   责编：许书婷、何平   网编：洪伟```0
   ## 6/1/2023 - [中国大陆人在台湾能不能享有同样权利？](https://www.rfa.org/mandarin/yataibaodao/gangtai/hcm-06012023105735.html)
  ```针对一起中国大陆人在台索赔案件，台湾行政院日前通令政府各部门，有关"大陆地区人民亦为中华民国人民"的相关条文已过时，应该停用。有在大陆的民国派人士对本台表示，此举违背中华民国宪法。那么，究竟大陆人在台湾能不能享有同样的权利呢？ 台湾行政院："大陆地区人民亦为中华民国人民"停用台湾行政院令：大陆人不具中华民国国籍 2018年8月，一名大陆人在台湾的高雄骑自行车环岛期间因为路灯漏电遭电击身亡，家属请求“国赔”。台湾法院一审判决援引1993年台湾法务部函释“大陆地区人民亦为中华民国人民”，以及《台湾地区与大陆地区人民关系条例》(简称《两岸条例》)和《国家赔偿法》相关无禁止大陆地区人民请求国家赔偿之规定，裁定向遇难者家属赔偿新台币463万元。然而，台湾的行政院近期通令各部会，依《国籍法》之定义，中国大陆人民不具中华民国国籍、非属中华民国国民，自不享有或负担中华民国国民之权利义务。凡旧函释与此抵触者，应自即日起停止适用或不再援用。大陆人是否为中华民国国民？学者：户籍所在为依据台湾东吴大学法律学系教授暨公法中心主任胡博砚对本台表示，《两岸条例》第2条规定，关于大陆地区居民的定义并没有牵涉到国籍，只有户籍的问题。该法规范是基于宪法增修条文的授权，以此特别规定做解释，这是行政院的逻辑脉络。“《入出国及移民法》不只有‘国人’与‘外国人’分法，把台湾人、外国人、大陆地区居民、港澳地区居民以及无国籍人士，各种状况都纳入。行政院函文把不同的状况都写得清楚，以后发生争议的可能性不大。”胡博砚补充说明。国立政治大学法律学系副教授廖元豪告诉本台，此判决“天下本无事，庸人自扰之”，就算是行政院函释也不敢违背法律，称“大陆人是外国人”，而是强调“大陆人不是中华民国国民”。但是大陆人有“两岸条例”规定，本来就不是以“国民”处理。廖元豪进一步解释，核心的公民概念是“国籍加户籍”，有一种是“无户籍国民”，大陆以及港澳人士即属此类，《两岸条例》把中、港、澳居民与一般无户籍国民区分：“目前的法律是用户籍来区分。大陆人民户籍登记在大陆，台湾地区人民就是户籍登记在台湾。两个户籍只能选一个，如果台湾人跑去大陆登记户籍，台湾就会予以注销，就称为‘大陆人民’。”中华民国国民身份证是台湾认证中华民国国籍的条件之一（维基百科截图）政院函释是否被解读为法理台独？中国国台办发言人朱凤莲31日针对相关应询表示，“大陆和台湾同属一个中国，两岸同胞都是中国人。无论‘台独’分裂势力如何花样翻新、不择手段，都改变不了台湾是中国一部分的事实”。胡博砚就法律层面解释，目前在中华民国宪法中，对国籍认定亦未确定，目前立法仅限定“中华民国台湾地区”这群人才有中华民国国籍；但是“中华民国大陆地区”仍不清楚：“用法律解释还没有直接涉及到宪政问题。可能对于台派人士来讲，认为的法理台独还是有一段距离”。廖元豪直指，台湾所有法律对“大陆人”都另眼看待，就算是“国民”也没有国民的权利义务，因并未设籍在台湾，所以给予不同待遇，“他不是外国人，但就是大陆人。”廖元豪：“政院有两个意涵，一是纯粹政治宣示，大陆人不是国民、两岸不是一家亲；其次，选举快到了，执政党一定很希望国民党有人跳脚喊大家都是’一个中国’，怎么能说不是’国民’。但政院函释对现实的判决、案件或所有的权利义务关系都没有影响，所以国民党没有激烈反应”。在陆民国派人士：中华民国包含两岸三地“我觉得台湾这个做法是不对的，它违背了中华民国的宪法。因为中华民国不管从历史还是地域，都属于大陆。”来自浙江的魏桢凌接受本台访问时表示，台湾只不过是因为1949年国共内战失败，国府迁到台湾，台湾仅是中华民国政府的一个暂时基地。当记者问道，是否还期待未来有一天中华民国会大一统的问题，魏桢凌说：“我非常期待，我觉得这可能性很大。因为只要我们中国大陆发生变化，中国大陆肯定是回归到一个民主的中国，那肯定是中华民国，没有任何一个国家可以替代。”他说，他不会对台湾的行政院宣示感到失落，但这绝对是错误的作法，如果“蒋先生”还在世，肯定不会支持。胡博砚说，他可以理解所谓的“民国派”人士情感上对此难以接受，但宪法对“固有疆域”没有确定，若按照过去的解释，恐怕连哈萨克、俄罗斯的部分人都可能会变成中华民国大陆地区的人民。 记者：黄春梅   责编：许书婷、何平   网编：洪伟```0
-  ## 6/1/2023 - [矛头直指709案家属　余文生妻子许艳被加控煽颠罪](https://www.rfa.org/mandarin/yataibaodao/renquanfazhi/gf-06012023100831.html)
- ```因涉嫌寻衅滋事被批捕的中国维权律师余文生与妻子许艳目前仍被囚禁。知情人士透露，近日许艳被加控性质远比寻衅滋事严重的煽动颠覆国家政权罪，分析认为，中国当局希望通过许艳案向西方发出警告。 余文生夫妇被控寻衅滋事　官方威胁律师勿协助维权律师余文生夫妇失踪近月　家属被迫放弃自请律师 许艳的代表律师5月30日到北京石景山看守所要求会见当事人。身在美国的维权律师王清鹏引述消息人士的话说，当时国保拒绝了许艳律师的会面要求。王清鹏：“许艳的律师5月30日去会见，石景山看守所以公安在提讯为由拒绝。随后赶过来的北京市公安局国保告诉律师不能会见，因为许艳的案子增加了一个新的罪名：煽动颠覆国家政权罪，这个罪名需要侦察机关的批准才能会见。但是没有向辩护律师出具任何文书。”许艳的丈夫余文生曾因“煽动颠覆国家政权”罪被判囚四年，去年获释。在余文生被羁押期间，许艳透过各种渠道为丈夫发声，包括与西方国家的外交官员会面，并经常接受外媒采访。王清鹏：“这个和她多年给余文生律师呼吁奔走营救有关系。还有一点，就是余文生律师服刑出来后，许艳和余文生律师在接受国际人权机构，特别是接受各民主国家驻华领事馆的邀请座谈时，曾揭露当局对他们夫妇的迫害。加上他们夫妇和当局国保不接触，不见面，当局对他们夫妇不好监控，所以进行抓捕迫害。”维权律师王清鹏（图）相信，许艳被控煽颠与她为营救余文生与西方外交官员会晤有关。（王清鹏独家提供，拍摄日期不详）滕彪：煽颠性质严重许艳命运难料据了解，许艳是第一个被抓捕并且被追究刑事责任的709案受害律师家属。王清鹏说，中国当局对外发放的讯息十分明确。王清鹏：“这次余文生律师夫妇被抓走，也表示当局向709律师的家属发出一个信号：你不服就要抓，抓你就要批捕，批捕就要判刑。余文生律师夫妇被抓捕，也是中共当局在向西方社会叫板：你们敢关心中国的人权，我们就抓捕你们关心的人，看看你们西方国家敢怎么办！”身在美国的维权律师滕彪表示，煽动颠覆国家政权罪性质远比寻衅滋事严重，许艳命运难料。滕彪：“这个罪名很显然是一个非常严重的政治性的罪名。当局会有很大的空间，轻的话可以判一两年，最长可以判到15年，所有在社交媒体上公开的言论以及私下的言论都可能被当作证据。”维权律师滕彪（图）估计，许艳在社媒发表的言论将成为她涉嫌煽颠的罪证。（滕彪独家提供，拍摄日期不详）余文生与妻子许艳今年四月中旬在北京被便衣公安强行传唤后与外界失去联系。消息人士透露，余文生也被羁押在北京石景山看守所。当局以不通过年检等手法，威胁律师和律师事务所不能代理案件。 记者：高锋   责编：许书婷、嘉远   网编：洪伟```0
