--- a/新闻/美国之音.md
+++ b/新闻/美国之音.md
@@ -1,4 +1,8 @@
 
+  ## 6/3/2023 - [报告：中国海外人权运动者面对专门骚扰及攻击 虚假讯息打压越发严重](https://www.voachinese.com/a/overseas-human-right-activists-on-china-face-transnational-repressions-060323/7121594.html)
+ ```在海外从事与中国相关的人权运动，会面对不少困难。有研究机构建议，需要去教授海外人权运动者如何筹集资金、如何营运组织、增强抵制虚假讯息的能力、以及加强对他们的精神健康的支援。```0
+  ## 6/3/2023 - [泽连斯基：乌克兰已经准备好对俄军展开大反攻](https://www.voachinese.com/a/zelenskyy-says-ukraine-ready-to-launch-counteroffensive-060323/7121533.html)
+ ```乌克兰总统泽连斯基（VolodymyrZelenskyy）在星期六（6月3日）发表的一篇媒体访谈中表示，乌克兰已经为其期待已久的大反攻做好了准备，以从俄国侵略军手中夺回属于自己的领土。“我们坚信我们一定会成功，”泽连斯基在接受华尔街日报专访时指出。```0
   ## 6/3/2023 - [美加海军执行罕见联合任务 舰船双双通过台湾海峡](https://www.voachinese.com/a/us-canadian-navies-stage-rare-joint-mission-through-taiwan-strait-20230603/7121461.html)
  ```美国海军表示，周六，一艘美国和一艘加拿大军舰驶过台湾海峡，这是在北京和华盛顿因中国宣称拥有台湾主权而紧张局势加剧之际，在敏感水道执行罕见的联合任务。```0
   ## 6/3/2023 - [奥斯汀：不寻求冲突，但不会在欺凌和胁迫面前退缩，否认刺激中国武力攻台 ](https://www.voachinese.com/a/us-china-shangri-la-dialogue-taiwan-south-china-sea-20230603/7121408.html)
@@ -36,9 +40,3 @@
  ```在天安门事件34周年前夕，美国国会暨行政当局中国委员会（CECC）两党领袖宣布增加提名北京四通桥抗议事件主角彭立发、公民记者张展以及南京传媒学院学生李康梦等三人为2023年诺贝尔和平奖候选人。“这些英雄的勇气应该要得到全世界的嘉奖，”议员们说。```0
   ## 6/2/2023 - [布林肯：乌克兰和平协议必须包括俄罗斯撤军](https://www.voachinese.com/a/blinken-says-peace-deal-in-ukraine-must-include-russia-s-withdrawal-20230602/7120812.html)
  ```美国国务卿安东尼·布林肯星期五(6月2日)说，要在乌克兰达成一项“公正与持久”的和平协议，就必须包括俄罗斯从所有被其控制的乌克兰领土撤走军队。```0
-  ## 6/2/2023 - [美中两军关系出现松动迹象：奥斯汀和李尚福在新加坡简短交谈](https://www.voachinese.com/a/us-chinese-defense-officials-talk-at-key-summit-20230602/7120243.html)
- ```中国国防部部长李尚福周五（六月二日）与美国国防部长劳埃德·奥斯汀在新加坡进行了交谈，这或许意味着北京在多次拒绝美国的对话要求之后双方关系出现缓和。```0
-  ## 6/2/2023 - [中情局长伯恩斯五月曾密访中国，在高层沟通不畅情况下试图改善关系
-
- ](https://www.voachinese.com/a/cia-chief-made-secret-visit-to-china-in-bid-to-thaw-relations-20230602/7120284.html)
- ```美国中央情报局长威廉·伯恩斯（WilliamBurns）上个月曾经秘密前往中国访问，并与中方官员举行会谈。在美中高层沟通不畅的情况下，拜登总统派遣他最信赖的高层官员之一访问中国，表明了美国政府对美中关系急剧恶化的严重关切。```0
