--- a/新闻/美国之音.md
+++ b/新闻/美国之音.md
@@ -1,4 +1,6 @@
 
+  ## 6/3/2023 - [美日韩防长签署协议，年底前实现朝鲜导弹发射信息实时共享](https://www.voachinese.com/a/us-japan-s-korea-aim-to-share-n-korea-missile-warning-data-060323/7121625.html)
+ ```美国、日本和韩国国防部长星期六（6月3日）签署一项协议，承诺三国将在今年年底之前实现实时共享朝鲜导弹发射预警数据的目标。这将是这三个国家在应对平壤构成的安全威胁采取的一项重大措施。```0
   ## 6/3/2023 - [报告：中国海外人权运动者面对专门骚扰及攻击 虚假讯息打压越发严重](https://www.voachinese.com/a/overseas-human-right-activists-on-china-face-transnational-repressions-060323/7121594.html)
  ```在海外从事与中国相关的人权运动，会面对不少困难。有研究机构建议，需要去教授海外人权运动者如何筹集资金、如何营运组织、增强抵制虚假讯息的能力、以及加强对他们的精神健康的支援。```0
   ## 6/3/2023 - [泽连斯基：乌克兰已经准备好对俄军展开大反攻](https://www.voachinese.com/a/zelenskyy-says-ukraine-ready-to-launch-counteroffensive-060323/7121533.html)
@@ -38,5 +40,3 @@
  ```美国总统乔·拜登(JoeBiden)将签署《财政责任法案》，该法案暂时取消联邦政府的债务上限至2025年1月，并避免可能发生的灾难性金融违约。```0
   ## 6/2/2023 - [纪念六四事件34周年，CECC主席提名彭立发、张展、李康梦角逐诺贝尔和平奖](https://www.voachinese.com/a/us-cecc-china-tiananmen-34th-anniversary-20230602/7120834.html)
  ```在天安门事件34周年前夕，美国国会暨行政当局中国委员会（CECC）两党领袖宣布增加提名北京四通桥抗议事件主角彭立发、公民记者张展以及南京传媒学院学生李康梦等三人为2023年诺贝尔和平奖候选人。“这些英雄的勇气应该要得到全世界的嘉奖，”议员们说。```0
-  ## 6/2/2023 - [布林肯：乌克兰和平协议必须包括俄罗斯撤军](https://www.voachinese.com/a/blinken-says-peace-deal-in-ukraine-must-include-russia-s-withdrawal-20230602/7120812.html)
- ```美国国务卿安东尼·布林肯星期五(6月2日)说，要在乌克兰达成一项“公正与持久”的和平协议，就必须包括俄罗斯从所有被其控制的乌克兰领土撤走军队。```0
