--- a/新闻/法国国际广播电台.md
+++ b/新闻/法国国际广播电台.md
@@ -1,4 +1,6 @@
 
+  ## 6/3/2023 - [荷兰防长称崔天凯的乌战是欧洲安全架构失败的结论“非常非常错误”](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E8%8D%B7%E5%85%B0%E9%98%B2%E9%95%BF%E7%A7%B0%E5%B4%94%E5%A4%A9%E5%87%AF%E7%9A%84%E4%B9%8C%E6%88%98%E6%98%AF%E6%AC%A7%E6%B4%B2%E5%AE%89%E5%85%A8%E6%9E%B6%E6%9E%84%E5%A4%B1%E8%B4%A5%E7%9A%84%E7%BB%93%E8%AE%BA-%E9%9D%9E%E5%B8%B8%E9%9D%9E%E5%B8%B8%E9%94%99%E8%AF%AF)
+ ```中国一位经验丰富的外交官崔天凯在新加坡香格里拉安全与防卫论坛会议上将俄罗斯对乌克兰的侵略战争归因于欧洲安全架构的失败。 荷兰国防部长KajsaOllongren对中国的这种解释提出质疑。因崔天凯是退休外交官，荷兰防长称等候听中国防长的正式官方立场表述。```0
   ## 6/3/2023 - [方济各将访蒙古 称遥望北京](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230603-%E6%96%B9%E6%B5%8E%E5%90%84%E5%B0%86%E8%AE%BF%E8%92%99%E5%8F%A4-%E7%A7%B0%E9%81%A5%E6%9C%9B%E5%8C%97%E4%BA%AC)
  ```教皇弗朗西斯将于8月31日至9月4日作访问蒙古之行，这是他去过的最偏远的国度之一，那里只有大约1,300名天主教徒，但由于靠近中国，路透社说蒙古对罗马天主教具有重要的战略意义。```0
   ## 6/3/2023 - [美国加紧构建对华沟通渠道 一副国务卿明日突访北京](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E7%BE%8E%E5%9B%BD%E5%8A%A0%E7%B4%A7%E6%9E%84%E5%BB%BA%E5%AF%B9%E5%8D%8E%E6%B2%9F%E9%80%9A%E6%B8%A0%E9%81%93-%E4%B8%80%E5%89%AF%E5%9B%BD%E5%8A%A1%E5%8D%BF%E6%98%8E%E6%97%A5%E7%AA%81%E8%AE%BF%E5%8C%97%E4%BA%AC)
@@ -57,5 +59,3 @@
  ```路透社引述根据航班跟踪网站FlightAware和行业官员的说法，中国航空公司或避免在新批准的往返美国的航班中飞越俄罗斯领空。中美互飞如果飞越俄罗斯上空路线，路程与耗油明显有不同，中俄关系与美俄关系有天壤之别。```0
   ## 6/2/2023 - [英国两报诽谤罪诉讼哈利要出庭作证 历史经验称或两败俱伤](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230602-%E8%8B%B1%E5%9B%BD%E4%B8%A4%E6%8A%A5%E8%AF%BD%E8%B0%A4%E7%BD%AA%E8%AF%89%E8%AE%BC%E5%93%88%E5%88%A9%E8%A6%81%E5%87%BA%E5%BA%AD%E4%BD%9C%E8%AF%81-%E5%8E%86%E5%8F%B2%E7%BB%8F%E9%AA%8C%E7%A7%B0%E6%88%96%E4%B8%A4%E8%B4%A5%E4%BF%B1%E4%BC%A4)
  ```英国哈里王子将成为130年来第一位在法庭上作证的高级英国皇室成员，下周他将在对他也参加指控的报业集团非法行为诉讼中作证。他出庭很可能会引起全世界的关注。英国王室一般避免卷入诉讼，因为王室担心不能控制诉讼走向，受两败俱伤威胁。```0
-  ## 6/2/2023 - [【视频】俄军对基辅空袭：致3人死亡，包括一名儿童](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20230602-%E8%A7%86%E9%A2%91-%E4%BF%84%E5%86%9B%E5%AF%B9%E5%9F%BA%E8%BE%85%E7%A9%BA%E8%A2%AD-%E8%87%B43%E4%BA%BA%E6%AD%BB%E4%BA%A1%EF%BC%8C%E5%8C%85%E6%8B%AC%E4%B8%80%E5%90%8D%E5%84%BF%E7%AB%A5)
- ```6月1日(星期四)凌晨，俄罗斯再次对基辅发动空袭，造成至少3人死亡，其中包括一名儿童。据乌克兰军方表示，俄军当天向基辅发射了约10枚弹道导弹，乌克兰防空系统拦截了所有这些导弹，但坠落的弹片造成了人员伤亡和设施受损。```0
