--- a/新闻/美国之音.md
+++ b/新闻/美国之音.md
@@ -1,4 +1,9 @@
 
+  ## 6/3/2023 - [美中沟通渠道并未堵死：美助理国务卿和白宫国安会高官联袂访华
+](https://www.voachinese.com/a/senior-us-official-to-travel-to-china-for-rare-visit---government-060323/7121681.html)
+ ```美国国务院星期六（6月3日）宣布，主管东亚和太平洋事务发助理国务卿康达（DanielKritenbrink）将于6月4日至10日前往中国和新西兰访问。这是继美国中央情报局局长威廉·伯恩斯（WilliamBurns）上个月秘密访问北京之后，又一位主管中国事务的高层官员访华。```0
+  ## 6/3/2023 - [“保持历史记忆就是对极权的抵抗” 六四34周年纪念活动在纽约华盛顿展开](https://www.voachinese.com/a/june4th-commemorative-events-in-ny-dc-20230603/7121614.html)
+ ```6月2日，六四天安门镇压事件34周年之际，筹备已久的六四纪念馆在纽约曼哈顿开幕。傍晚，抗议中共六四屠杀的示威者，游行前往中国驻纽约总领事馆。他们中不仅有当年被中共通缉的学生领袖，也有不少年龄与当年的学生领袖相仿、在中共严格舆论监控下成长起来的“90后”们。```0
   ## 6/3/2023 - [美日韩防长签署协议，年底前实现朝鲜导弹发射信息实时共享](https://www.voachinese.com/a/us-japan-s-korea-aim-to-share-n-korea-missile-warning-data-060323/7121625.html)
  ```美国、日本和韩国国防部长星期六（6月3日）签署一项协议，承诺三国将在今年年底之前实现实时共享朝鲜导弹发射预警数据的目标。这将是这三个国家在应对平壤构成的安全威胁采取的一项重大措施。```0
   ## 6/3/2023 - [报告：中国海外人权运动者面对专门骚扰及攻击 虚假讯息打压越发严重](https://www.voachinese.com/a/overseas-human-right-activists-on-china-face-transnational-repressions-060323/7121594.html)
@@ -36,7 +41,3 @@
  ```美国表示，它不打算制造更多核武器来应对来自俄罗斯、中国以及越来越多的拥有或可能很快拥有核能力的对手的威胁。```0
   ## 6/2/2023 - [神舟十六号完成载人任务　中国航天技术恐追上美国?](https://www.voachinese.com/a/china-launches-shenzhou-16-mission/7120934.html)
  ```中国成功发射神舟十六号载人飞船后，三名宇航员6月2日已在天宫空间站与前一期的宇航员正式完成交接。观察人士表示，这代表中国的载人航天技术已取得稳步进展，有助于中共进一步宣扬国力和巩固其政权的合法性。分析人士说，美国虽仍在太空领域保有技术领先和经验优势，但若未持续将航太发展视为优先政策，未来恐被中国追上。```0
-  ## 6/2/2023 - [拜登将就美国成功避免债务违约发表讲话](https://www.voachinese.com/a/biden-to-deliver-remarks-on-us-avoiding-default-20230602/7120899.html)
- ```美国总统乔·拜登(JoeBiden)将签署《财政责任法案》，该法案暂时取消联邦政府的债务上限至2025年1月，并避免可能发生的灾难性金融违约。```0
-  ## 6/2/2023 - [纪念六四事件34周年，CECC主席提名彭立发、张展、李康梦角逐诺贝尔和平奖](https://www.voachinese.com/a/us-cecc-china-tiananmen-34th-anniversary-20230602/7120834.html)
- ```在天安门事件34周年前夕，美国国会暨行政当局中国委员会（CECC）两党领袖宣布增加提名北京四通桥抗议事件主角彭立发、公民记者张展以及南京传媒学院学生李康梦等三人为2023年诺贝尔和平奖候选人。“这些英雄的勇气应该要得到全世界的嘉奖，”议员们说。```0
