--- a/新闻/法国国际广播电台.md
+++ b/新闻/法国国际广播电台.md
@@ -1,4 +1,6 @@
 
+  ## 6/3/2023 - [六四34周年：海外中国留学生接着点燃蜡烛](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E7%89%B9%E5%88%AB%E8%8A%82%E7%9B%AE/20230603-%E5%85%AD%E5%9B%9B34%E5%91%A8%E5%B9%B4-%E6%B5%B7%E5%A4%96%E4%B8%AD%E5%9B%BD%E7%95%99%E5%AD%A6%E7%94%9F%E6%8E%A5%E7%9D%80%E7%82%B9%E7%87%83%E8%9C%A1%E7%83%9B)
+ ```2023年六月四日是六四天安门事件34周年的纪念日，三十四年了，在天安门惨遭屠杀的受害者究竟是多少依然是一个未知数！死难者家属天安门母亲组织的成员们也一个接一个地追随他们的死去的亲人们遗憾地离开了人世，随着北京政权的日益强硬专横，他们的亲人获得平反昭雪的这一天似乎越来越遥遥无期。不过，虽然中国官方竭尽努力试图将事件从历史上抹去，虽然中国国内的新一代人绝大多数都不知道六四意味着什么，在海外的华人却继续年复一年地举行纪念仪式。最近几年来，一些在海外的中国年轻人，虽然并没有亲身经历六四，但也逐渐加入了纪念六四的队伍，他们甚至勇敢地面对遭受北京政府打压的风险公开地站出来组织自己的纪念活动，生活在巴黎的年轻的艺术工作者蒋不就是其中之一，他向法广介绍了他为何要纪念六四。```0
   ## 6/3/2023 - [荷兰防长称崔天凯的乌战是欧洲安全架构失败的结论“非常非常错误”](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E8%8D%B7%E5%85%B0%E9%98%B2%E9%95%BF%E7%A7%B0%E5%B4%94%E5%A4%A9%E5%87%AF%E7%9A%84%E4%B9%8C%E6%88%98%E6%98%AF%E6%AC%A7%E6%B4%B2%E5%AE%89%E5%85%A8%E6%9E%B6%E6%9E%84%E5%A4%B1%E8%B4%A5%E7%9A%84%E7%BB%93%E8%AE%BA-%E9%9D%9E%E5%B8%B8%E9%9D%9E%E5%B8%B8%E9%94%99%E8%AF%AF)
  ```中国一位经验丰富的外交官崔天凯在新加坡香格里拉安全与防卫论坛会议上将俄罗斯对乌克兰的侵略战争归因于欧洲安全架构的失败。 荷兰国防部长KajsaOllongren对中国的这种解释提出质疑。因崔天凯是退休外交官，荷兰防长称等候听中国防长的正式官方立场表述。```0
   ## 6/3/2023 - [方济各将访蒙古 称遥望北京](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230603-%E6%96%B9%E6%B5%8E%E5%90%84%E5%B0%86%E8%AE%BF%E8%92%99%E5%8F%A4-%E7%A7%B0%E9%81%A5%E6%9C%9B%E5%8C%97%E4%BA%AC)
@@ -57,5 +59,3 @@
  ```美国在亚洲采取新军事策略，包括通过将武器装备、部队和指挥所分散到各地前哨基地，美国希望使中国更难通过削弱任何单一军事设施来发动决定性打击。```0
   ## 6/2/2023 - [与美国对航的中国航班可能不再飞俄罗斯上空航线](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230602-%E4%B8%8E%E7%BE%8E%E5%9B%BD%E5%AF%B9%E8%88%AA%E7%9A%84%E4%B8%AD%E5%9B%BD%E8%88%AA%E7%8F%AD%E5%8F%AF%E8%83%BD%E4%B8%8D%E5%86%8D%E9%A3%9E%E4%BF%84%E7%BD%97%E6%96%AF%E4%B8%8A%E7%A9%BA%E8%88%AA%E7%BA%BF)
  ```路透社引述根据航班跟踪网站FlightAware和行业官员的说法，中国航空公司或避免在新批准的往返美国的航班中飞越俄罗斯领空。中美互飞如果飞越俄罗斯上空路线，路程与耗油明显有不同，中俄关系与美俄关系有天壤之别。```0
-  ## 6/2/2023 - [英国两报诽谤罪诉讼哈利要出庭作证 历史经验称或两败俱伤](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230602-%E8%8B%B1%E5%9B%BD%E4%B8%A4%E6%8A%A5%E8%AF%BD%E8%B0%A4%E7%BD%AA%E8%AF%89%E8%AE%BC%E5%93%88%E5%88%A9%E8%A6%81%E5%87%BA%E5%BA%AD%E4%BD%9C%E8%AF%81-%E5%8E%86%E5%8F%B2%E7%BB%8F%E9%AA%8C%E7%A7%B0%E6%88%96%E4%B8%A4%E8%B4%A5%E4%BF%B1%E4%BC%A4)
- ```英国哈里王子将成为130年来第一位在法庭上作证的高级英国皇室成员，下周他将在对他也参加指控的报业集团非法行为诉讼中作证。他出庭很可能会引起全世界的关注。英国王室一般避免卷入诉讼，因为王室担心不能控制诉讼走向，受两败俱伤威胁。```0
