--- a/新闻/美国之音.md
+++ b/新闻/美国之音.md
@@ -1,4 +1,6 @@
 
+  ## 6/3/2023 - [美国在印太安全布局获得重大进展，专家：印太军力平衡可能向美国及盟友倾斜](https://www.voachinese.com/a/us-china-naval-power-balance-20230603/7121653.html)
+ ```美国国防部长劳埃德·奥斯汀（LloydAustin）星期六（6月3日）在新加坡“香格里拉安全对话”上说，过去一年，美国和印太地区的盟友和伙伴在实现“自由、开放和安全的”印太地区愿景方面取得“历史性进展”，“现在威慑力强大”。主办“香格里拉对话”的英国智库国际战略研究所（IISS）此前一天公布新报告说，虽然中国的军力还在发展，但美国及其地区盟友在安全方面的努力正在改变印太地区的军力平衡，使其重新向美国和盟友倾斜。```0
   ## 6/3/2023 - [美中沟通渠道并未堵死：美助理国务卿和白宫国安会高官联袂访华
 ](https://www.voachinese.com/a/senior-us-official-to-travel-to-china-for-rare-visit---government-060323/7121681.html)
  ```美国国务院星期六（6月3日）宣布，主管东亚和太平洋事务发助理国务卿康达（DanielKritenbrink）将于6月4日至10日前往中国和新西兰访问。这是继美国中央情报局局长威廉·伯恩斯（WilliamBurns）上个月秘密访问北京之后，又一位主管中国事务的高层官员访华。```0
@@ -39,5 +41,3 @@
   ## 6/2/2023 - [
 面对俄中挑战，美国对其现有核武库充满信心](https://www.voachinese.com/a/us-confident-in-its-nuclear-stockpile-seldin-20230602/7120863.html)
  ```美国表示，它不打算制造更多核武器来应对来自俄罗斯、中国以及越来越多的拥有或可能很快拥有核能力的对手的威胁。```0
-  ## 6/2/2023 - [神舟十六号完成载人任务　中国航天技术恐追上美国?](https://www.voachinese.com/a/china-launches-shenzhou-16-mission/7120934.html)
- ```中国成功发射神舟十六号载人飞船后，三名宇航员6月2日已在天宫空间站与前一期的宇航员正式完成交接。观察人士表示，这代表中国的载人航天技术已取得稳步进展，有助于中共进一步宣扬国力和巩固其政权的合法性。分析人士说，美国虽仍在太空领域保有技术领先和经验优势，但若未持续将航太发展视为优先政策，未来恐被中国追上。```0
