--- a/新闻/美国之音.md
+++ b/新闻/美国之音.md
@@ -1,5 +1,5 @@
 
-  ## 6/3/2023 - [美国在印太安全布局获得重大进展，专家：印太军力平衡可能向美国及盟友倾斜](https://www.voachinese.com/a/us-china-naval-power-balance-20230603/7121653.html)
+  ## 6/3/2023 - [美国在印太安全布局获得重大进展，专家：区域军力平衡可能向美国及盟友倾斜](https://www.voachinese.com/a/us-china-naval-power-balance-20230603/7121653.html)
  ```美国国防部长劳埃德·奥斯汀（LloydAustin）星期六（6月3日）在新加坡“香格里拉安全对话”上说，过去一年，美国和印太地区的盟友和伙伴在实现“自由、开放和安全的”印太地区愿景方面取得“历史性进展”，“现在威慑力强大”。主办“香格里拉对话”的英国智库国际战略研究所（IISS）此前一天公布新报告说，虽然中国的军力还在发展，但美国及其地区盟友在安全方面的努力正在改变印太地区的军力平衡，使其重新向美国和盟友倾斜。```0
   ## 6/3/2023 - [美中沟通渠道并未堵死：美助理国务卿和白宫国安会高官联袂访华
 ](https://www.voachinese.com/a/senior-us-official-to-travel-to-china-for-rare-visit---government-060323/7121681.html)
